基盤を作成

--- a/localisation/geacps_SIC_l_english.yml
+++ b/localisation/geacps_SIC_l_english.yml
@@ -55,6 +55,7 @@
  SIC_Improving_the_situation_of_the_division:0"師団の状況を改善"
  SIC_Improving_the_situation_of_the_division_desc:0""
 #国民精神
+ SIC_idea_1:0"伝統的な産業"
 #ツールチップ
 #閣僚
 #特性
