stateファイル名移設

--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -205,7 +205,7 @@
  STATE_766:0 "ブジャク"
  STATE_784:0 "ズーキヤ"
  STATE_787:0 "ギルギット・バルティスタン"
- STATE_797:0 "東京"
+ STATE_797:0 "イスタンブール"
  STATE_799:0 "北ドブルジャ"
  STATE_806:0 "アルプ＝マリティーム"
  STATE_807:0 "名古屋"
@@ -218,42 +218,42 @@
  STATE_814:0 "チャンパーサック"
  STATE_815:0 "サイニャブーリー"
  STATE_816:0 "東北部"
- STATE_817:0 ""
- STATE_818:0 ""
- STATE_819:0 ""
- STATE_820:0 ""
- STATE_821:0 ""
- STATE_822:0 ""
+ STATE_817:0 "リアウ諸島"
+ STATE_818:0 "ラカイン"
+ STATE_819:0 "ヤンゴン"
+ STATE_820:0 "カチン"
+ STATE_821:0 "クルナ"
+ STATE_822:0 "シッキム"
  STATE_823:0 "ダルバンガ"
- STATE_824:0 ""
- STATE_825:0 ""
- STATE_826:0 ""
- STATE_827:0 ""
- STATE_828:0 ""
- STATE_829:0 ""
- STATE_830:0 ""
- STATE_831:0 ""
- STATE_832:0 ""
- STATE_833:0 ""
+ STATE_824:0 "天津"
+ STATE_825:0 "上海"
+ STATE_826:0 "杭州"
+ STATE_827:0 "廈門"
+ STATE_828:0 "デラウェア"
+ STATE_829:0 "ノースミズーリ"
+ STATE_830:0 "オワイヒー"
+ STATE_831:0 "クララム"
+ STATE_832:0 "オールバニ"
+ STATE_833:0 "ロサンゼルス"
  STATE_834:0 "ジムピティ"
  STATE_835:0 "アクキスタウ"
  STATE_836:0 "ソリ＝イレツク"
- STATE_837:0 ""
- STATE_838:0 ""
- STATE_839:0 ""
- STATE_840:0 ""
- STATE_841:0 ""
- STATE_842:0 ""
- STATE_843:0 ""
- STATE_844:0 ""
- STATE_845:0 ""
- STATE_846:0 ""
- STATE_847:0 ""
- STATE_848:0 ""
- STATE_849:0 ""
- STATE_850:0 ""
- STATE_851:0 ""
- STATE_852:0 ""
+ STATE_837:0 "ザールラント"
+ STATE_838:0 "モゼル"
+ STATE_839:0 "ロレーヌ"
+ STATE_840:0 "ビットブルク＝プリュム"
+ STATE_841:0 "ラインラント"
+ STATE_842:0 "南シュレースヴィヒ"
+ STATE_843:0 "ラティーナ"
+ STATE_844:0 "アブルッツォ"
+ STATE_845:0 "ヴェネツィアナ"
+ STATE_846:0 "ザクセン＝アンハルト"
+ STATE_847:0 "南ハノーファー＝ブラウンシュヴァイク"
+ STATE_848:0 "フリウリ＝ヴェネツィア・ジュリア"
+ STATE_849:0 "イストラ"
+ STATE_850:0 "スレム"
+ STATE_851:0 "オシエク＝バラニャ"
+ STATE_852:0 "バーデン"
  STATE_853:0 "エキバストス"
  STATE_854:0 "アクモラ"
  STATE_855:0 "コスタナイ"
@@ -264,8 +264,8 @@
  STATE_860:0 "シワン"
  STATE_861:0 "ジャールカンド"
  STATE_862:0 "アラー"
- STATE_863:0 ""
- STATE_864:0 ""
+ STATE_863:0 "シンガポール"
+ STATE_864:0 "シャン"
  STATE_865:0 "チャンディーガル"
  STATE_866:0 "ナーグプル"
  STATE_867:0 "キシャンガンジ"
