--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -930,3 +930,4 @@
  VICTORY_POINTS_10239:0 "アクモリンスク"
  VICTORY_POINTS_12754:0 "ジャンムー"
  VICTORY_POINTS_6570:0 "ボン"
+ VICTORY_POINTS_10113:0 "テトゥアン"
