--- a/localisation/_geacps_bookmarks_l_english.yml
+++ b/localisation/_geacps_bookmarks_l_english.yml
@@ -1,8 +1,18 @@
 ﻿l_english:
+#シナリオ
  THE_GORIOUS_FAR_EAST_EMPIRE_NAME:0 "栄光ある極東の帝国"
  THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  
+ THE_CHAOS_OF_EUROPE_NAME:0 "混沌の欧州"
+ THE_CHAOS_OF_EUROPE_DESC:0 ""
+ 
 #各国の説明
+ JAP_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
+ ENG_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
+ ENG_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
+ FRA_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
+ SOV_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
+ USA_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  JAP_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  ENG_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  FRA_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
