--- a/localisation/geacps_FRA_l_english.yml
+++ b/localisation/geacps_FRA_l_english.yml
@@ -69,3 +69,8 @@
  FRA_build_resach:0 "国立研究所の創設"
 
 #国民精神
+ GEACPS_IDEA_FRA_1:0 "ド・ゴール体制"
+ GEACPS_IDEA_FRA_2:0 "国内情勢の不安"
+ GEACPS_IDEA_FRA_3:0 "エラン・ヴィタール"
+ GEACPS_IDEA_FRA_4:0 "グランダルメ"
+ GEACPS_IDEA_FRA_5:0 "戦闘には負けたが、戦争に負けたわけではない"
