--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -1,83 +1,82 @@
 ﻿l_english:
 #国家方針
- GEACPS_NF_JAP_1:0 "帝国の未来"
- GEACPS_NF_JAP_2:0 "民主化を推し進める"
- GEACPS_NF_JAP_3:0 "現状維持"
- GEACPS_NF_JAP_4:0 "女性参政権運動"
- GEACPS_NF_JAP_5:0 "皇道派の支持"
- GEACPS_NF_JAP_6:0 "統制派の支持"
- GEACPS_NF_JAP_7:0 "憲法改正"
- GEACPS_NF_JAP_8:0 "暗殺計画"
- GEACPS_NF_JAP_9:0 "粛軍"
- GEACPS_NF_JAP_10:0 "議会中心主義"
- GEACPS_NF_JAP_11:0 "皇室中心主義"
- GEACPS_NF_JAP_12:0 "クーデターの準備"
- GEACPS_NF_JAP_13:0 "軍事教育の改善"
- GEACPS_NF_JAP_14:0 "神州"
- GEACPS_NF_JAP_15:0 "財閥の未来"
- GEACPS_NF_JAP_16:0 "解体"
- GEACPS_NF_JAP_17:0 "国有化"
- GEACPS_NF_JAP_18:0 "合体"
- GEACPS_NF_JAP_19:0 "民間企業の投資"
- GEACPS_NF_JAP_20:0 "三井財閥"
- GEACPS_NF_JAP_21:0 "三菱財閥"
- GEACPS_NF_JAP_22:0 "住友財閥"
- GEACPS_NF_JAP_23:0 "ただ一つの財閥"
- GEACPS_NF_JAP_24:0 "民需に注力・壱"
- GEACPS_NF_JAP_25:0 "番頭政治"
- GEACPS_NF_JAP_26:0 "独裁政治"
- GEACPS_NF_JAP_27:0 "法治主義"
- GEACPS_NF_JAP_28:0 "軍需に注力・壱"
- GEACPS_NF_JAP_29:0 "民需に注力・弐"
- GEACPS_NF_JAP_30:0 "総力戦研究所海軍部"
- GEACPS_NF_JAP_31:0 "軍需に注力・弐"
- GEACPS_NF_JAP_32:0 "民需に注力・参"
- GEACPS_NF_JAP_33:0 "総力戦研究所陸軍部"
- GEACPS_NF_JAP_34:0 "軍需に注力・参"
- GEACPS_NF_JAP_35:0 "研究枠の追加"
- GEACPS_NF_JAP_36:0 "三井研究所"
- GEACPS_NF_JAP_37:0 "三菱研究所"
- GEACPS_NF_JAP_38:0 "住友研究所"
- GEACPS_NF_JAP_39:0 "民間研究所・壱"
- GEACPS_NF_JAP_40:0 "統一研究所・壱"
- GEACPS_NF_JAP_41:0 "民間研究所・弐"
- GEACPS_NF_JAP_42:0 "統一研究所・弐"
- GEACPS_NF_JAP_43:0 "民間研究所・参"
- GEACPS_NF_JAP_44:0 "統一研究所・参"
- GEACPS_NF_JAP_45:0 "対外論の選考"
- GEACPS_NF_JAP_46:0 "西進論"
- GEACPS_NF_JAP_47:0 "北進論"
- GEACPS_NF_JAP_48:0 "東進論"
- GEACPS_NF_JAP_49:0 "立憲民政党の支持"
- GEACPS_NF_JAP_50:0 "立憲政友会の支持"
- GEACPS_NF_JAP_51:0 "東洋一の民主国家"
- GEACPS_NF_JAP_52:0 "論理的思考を重視"
- GEACPS_NF_JAP_53:0 "根性論"
- GEACPS_NF_JAP_54:0 "決行"
- GEACPS_NF_JAP_55:0 "軍令部の拡張"
- GEACPS_NF_JAP_56:0 "参謀本部の拡張"
- GEACPS_NF_JAP_57:0 "昭和維新の実現"
- GEACPS_NF_JAP_58:0 "軍部の暴走の鎮静化"
- GEACPS_NF_JAP_59:0 "議会改革"
- GEACPS_NF_JAP_60:0 "皇室改革"
- GEACPS_NF_JAP_61:0 "モンゴルを手中に"
- GEACPS_NF_JAP_62:0 "志那の統一"
- GEACPS_NF_JAP_63:0 "トランスバイカルとの交渉"
- GEACPS_NF_JAP_64:0 "対岸の対処"
- GEACPS_NF_JAP_65:0 "米国の箱庭"
- GEACPS_NF_JAP_66:0 "共産党の対処"
- GEACPS_NF_JAP_67:0 "国民党の対処"
- GEACPS_NF_JAP_68:0 "東シベリアをトランスバイカルに統合"
- GEACPS_NF_JAP_69:0 "新たな仲間"
- GEACPS_NF_JAP_70:0 "ケベックの分離を扇動"
- GEACPS_NF_JAP_71:0 "西海岸に介入"
- GEACPS_NF_JAP_72:0 "メキシコの奇跡の破壊"
- GEACPS_NF_JAP_73:0 "志那の未来"
- GEACPS_NF_JAP_74:0 "勘察加半島の要求"
- GEACPS_NF_JAP_75:0 "ケベック義勇軍"
- GEACPS_NF_JAP_76:0 "日仏共同宣言"
- GEACPS_NF_JAP_77:0 "米国義勇軍"
- GEACPS_NF_JAP_78:0 "革命勢力の蜂起を扇動"
+ GEACPS_NF_JAP_1:0 "東条英機の暗殺未遂"
+ GEACPS_NF_JAP_2:0 "臨時議会"
+ GEACPS_NF_JAP_3:0 "次期内閣総理大臣の選出"
+ GEACPS_NF_JAP_4:0 "予算案"
+ GEACPS_NF_JAP_5:0 "貴族"
+ GEACPS_NF_JAP_6:0 "軍人"
+ GEACPS_NF_JAP_7:0 "政治家"
+ GEACPS_NF_JAP_8:0 "陸軍の予算を増やす"
+ GEACPS_NF_JAP_9:0 "海軍の予算を増やす"
+ GEACPS_NF_JAP_10:0 "皇族"
+ GEACPS_NF_JAP_11:0 "華族"
+ GEACPS_NF_JAP_12:0 "陸軍"
+ GEACPS_NF_JAP_13:0 "海軍"
+ GEACPS_NF_JAP_14:0 "平民宰相"
+ GEACPS_NF_JAP_15:0 "現状の維持"
+ GEACPS_NF_JAP_16:0 "新体制"
+ GEACPS_NF_JAP_17:0 ""
+ GEACPS_NF_JAP_18:0 ""
+ GEACPS_NF_JAP_19:0 ""
+ GEACPS_NF_JAP_20:0 ""
+ GEACPS_NF_JAP_21:0 ""
+ GEACPS_NF_JAP_22:0 ""
+ GEACPS_NF_JAP_23:0 ""
+ GEACPS_NF_JAP_24:0 ""
+ GEACPS_NF_JAP_25:0 ""
+ GEACPS_NF_JAP_27:0 ""
+ GEACPS_NF_JAP_28:0 ""
+ GEACPS_NF_JAP_29:0 ""
+ GEACPS_NF_JAP_30:0 ""
+ GEACPS_NF_JAP_31:0 ""
+ GEACPS_NF_JAP_32:0 ""
+ GEACPS_NF_JAP_33:0 ""
+ GEACPS_NF_JAP_34:0 ""
+ GEACPS_NF_JAP_35:0 ""
+ GEACPS_NF_JAP_36:0 ""
+ GEACPS_NF_JAP_37:0 ""
+ GEACPS_NF_JAP_38:0 ""
+ GEACPS_NF_JAP_39:0 ""
+ GEACPS_NF_JAP_40:0 ""
+ GEACPS_NF_JAP_41:0 ""
+ GEACPS_NF_JAP_42:0 ""
+ GEACPS_NF_JAP_43:0 ""
+ GEACPS_NF_JAP_44:0 ""
+ GEACPS_NF_JAP_45:0 ""
+ GEACPS_NF_JAP_46:0 ""
+ GEACPS_NF_JAP_47:0 ""
+ GEACPS_NF_JAP_48:0 ""
+ GEACPS_NF_JAP_49:0 ""
+ GEACPS_NF_JAP_50:0 ""
+ GEACPS_NF_JAP_51:0 ""
+ GEACPS_NF_JAP_52:0 ""
+ GEACPS_NF_JAP_53:0 ""
+ GEACPS_NF_JAP_54:0 ""
+ GEACPS_NF_JAP_55:0 ""
+ GEACPS_NF_JAP_56:0 ""
+ GEACPS_NF_JAP_57:0 ""
+ GEACPS_NF_JAP_58:0 ""
+ GEACPS_NF_JAP_59:0 ""
+ GEACPS_NF_JAP_60:0 ""
+ GEACPS_NF_JAP_61:0 ""
+ GEACPS_NF_JAP_62:0 ""
+ GEACPS_NF_JAP_63:0 ""
+ GEACPS_NF_JAP_64:0 ""
+ GEACPS_NF_JAP_65:0 ""
+ GEACPS_NF_JAP_66:0 ""
+ GEACPS_NF_JAP_67:0 ""
+ GEACPS_NF_JAP_68:0 ""
+ GEACPS_NF_JAP_69:0 ""
+ GEACPS_NF_JAP_70:0 ""
+ GEACPS_NF_JAP_71:0 ""
+ GEACPS_NF_JAP_72:0 ""
+ GEACPS_NF_JAP_73:0 ""
+ GEACPS_NF_JAP_74:0 ""
+ GEACPS_NF_JAP_75:0 ""
+ GEACPS_NF_JAP_76:0 ""
+ GEACPS_NF_JAP_77:0 ""
+ GEACPS_NF_JAP_78:0 ""
  GEACPS_NF_JAP_79:0 ""
  GEACPS_NF_JAP_80:0 ""
  GEACPS_NF_JAP_81:0 ""
