--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -13,17 +13,17 @@
  GEACPS_NF_JAP_11:0 "華族"
  GEACPS_NF_JAP_12:0 "陸軍"
  GEACPS_NF_JAP_13:0 "海軍"
- GEACPS_NF_JAP_14:0 "平民宰相"
- GEACPS_NF_JAP_15:0 "現状の維持"
- GEACPS_NF_JAP_16:0 "新体制"
- GEACPS_NF_JAP_17:0 ""
- GEACPS_NF_JAP_18:0 ""
- GEACPS_NF_JAP_19:0 ""
- GEACPS_NF_JAP_20:0 ""
- GEACPS_NF_JAP_21:0 ""
- GEACPS_NF_JAP_22:0 ""
- GEACPS_NF_JAP_23:0 ""
- GEACPS_NF_JAP_24:0 ""
+ GEACPS_NF_JAP_14:0 "大政翼賛会の解散"
+ GEACPS_NF_JAP_15:0 "参謀本部の拡張"
+ GEACPS_NF_JAP_16:0 "軍令部の拡張"
+ GEACPS_NF_JAP_17:0 "八紘一宇"
+ GEACPS_NF_JAP_18:0 "軍国主義"
+ GEACPS_NF_JAP_19:0 "平民宰相"
+ GEACPS_NF_JAP_20:0 "陸軍造兵廠の拡張"
+ GEACPS_NF_JAP_21:0 "海軍工廠の拡張"
+ GEACPS_NF_JAP_22:0 "現状の維持"
+ GEACPS_NF_JAP_23:0 "新体制"
+ GEACPS_NF_JAP_24:0 "国家総動員"
  GEACPS_NF_JAP_25:0 ""
  GEACPS_NF_JAP_27:0 ""
  GEACPS_NF_JAP_28:0 ""
