--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -1,19 +1,19 @@
 ﻿l_english:
 #国家方針
  GEACPS_NF_JAP_1:0 "東条英機の暗殺未遂"
- GEACPS_NF_JAP_2:0 "臨時議会"
+ GEACPS_NF_JAP_2:0 "臨時議会の開催"
  GEACPS_NF_JAP_3:0 "次期内閣総理大臣の選出"
- GEACPS_NF_JAP_4:0 "予算案"
- GEACPS_NF_JAP_5:0 "貴族"
- GEACPS_NF_JAP_6:0 "軍人"
- GEACPS_NF_JAP_7:0 "政治家"
- GEACPS_NF_JAP_8:0 "陸軍の予算を増やす"
- GEACPS_NF_JAP_9:0 "海軍の予算を増やす"
- GEACPS_NF_JAP_10:0 "皇族"
- GEACPS_NF_JAP_11:0 "華族"
- GEACPS_NF_JAP_12:0 "陸軍"
- GEACPS_NF_JAP_13:0 "海軍"
- GEACPS_NF_JAP_14:0 "大政翼賛会の解散"
+ GEACPS_NF_JAP_4:0 "予算案の提出"
+ GEACPS_NF_JAP_5:0 "貴族から"
+ GEACPS_NF_JAP_6:0 "軍人から"
+ GEACPS_NF_JAP_7:0 "政治家から"
+ GEACPS_NF_JAP_8:0 "陸軍の予算"
+ GEACPS_NF_JAP_9:0 "海軍の予算"
+ GEACPS_NF_JAP_10:0 "皇族出身"
+ GEACPS_NF_JAP_11:0 "華族出身"
+ GEACPS_NF_JAP_12:0 "陸軍出身"
+ GEACPS_NF_JAP_13:0 "海軍出身"
+ GEACPS_NF_JAP_14:0 "大政翼賛会を解散"
  GEACPS_NF_JAP_15:0 "参謀本部の拡張"
  GEACPS_NF_JAP_16:0 "軍令部の拡張"
  GEACPS_NF_JAP_17:0 "八紘一宇"
@@ -24,7 +24,7 @@
  GEACPS_NF_JAP_22:0 "現状の維持"
  GEACPS_NF_JAP_23:0 "新体制"
  GEACPS_NF_JAP_24:0 "国家総動員"
- GEACPS_NF_JAP_25:0 ""
+ GEACPS_NF_JAP_25:0 "新政権の樹立"
  GEACPS_NF_JAP_27:0 ""
  GEACPS_NF_JAP_28:0 ""
  GEACPS_NF_JAP_29:0 ""
