--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -112,7 +112,13 @@
  GEACPS_NF_JAP_navy_10:0 "旧式戦艦の代替"
  GEACPS_NF_JAP_navy_11:0 "装甲空母の発展"
  GEACPS_NF_JAP_navy_12:0 "西太平洋を護る最強の盾"
- GEACPS_NF_JAP_navy_13:0 ""
+ GEACPS_NF_JAP_navy_13:0 "アングルドデッキの採用"
+ GEACPS_NF_JAP_navy_14:0 "電子機器の改良"
+ GEACPS_NF_JAP_navy_15:0 "ドイツ潜水艦の模倣"
+ GEACPS_NF_JAP_navy_16:0 "近接信管の開発"
+ GEACPS_NF_JAP_navy_17:0 "世界最大の潜水艦"
+ GEACPS_NF_JAP_navy_18:0 "艦隊決戦重視の駆逐艦"
+ GEACPS_NF_JAP_navy_19:0 ""
  
 #国民精神
  GEACPS_IDEA_JAP_1:0 "大東亞共榮圈"
