大日本帝国NFの製作
暗殺から議会終了まで

--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -26,18 +26,18 @@
  JAP_Reform_of_the_Ministry_of_the_Navy:0 "海軍省の改革"
  JAP_Expansion_of_the_Naval_Command_Center:0 "海軍軍令部の拡張"
  JAP_Probation_for_thought_crime:0 "思想犯の保護観察"
- GEACPS_NF_JAP_27:0 ""
- GEACPS_NF_JAP_28:0 ""
- GEACPS_NF_JAP_29:0 ""
- GEACPS_NF_JAP_30:0 ""
- GEACPS_NF_JAP_31:0 ""
- GEACPS_NF_JAP_32:0 ""
- GEACPS_NF_JAP_33:0 ""
- GEACPS_NF_JAP_34:0 ""
- GEACPS_NF_JAP_35:0 ""
- GEACPS_NF_JAP_36:0 ""
- GEACPS_NF_JAP_37:0 ""
- GEACPS_NF_JAP_38:0 ""
+ JAP_The_End_of_Factional_Struggle:0 "派閥闘争の終焉"
+ JAP_Dealing_with_military_violence:0 "軍部の暴走に対処"
+ JAP_promulgation:0 "発布！"
+ JAP_Expansion_of_the_Army_Arsenal:0 "陸軍工廠の増設"
+ JAP_Expansion_of_Naval_Arsenal:0 "海軍工廠の増設"
+ JAP_Reconciliation_with_the_Imperialists:0 "皇道派との和解"
+ JAP_Tacit_approval_of_coup_preparations:0 "クーデター準備の黙認"
+ JAP_Council_of_Ministers:0 "重臣会議"
+ JAP_Implementing:0 "施行！"
+ JAP_Recognition:0 "承認！"
+ JAP_appointment_by_the_emperor:0 "天皇による任命"
+ JAP_Conclusion_of_the_Congress:0 "議会の終結"
  GEACPS_NF_JAP_39:0 ""
  GEACPS_NF_JAP_40:0 ""
  GEACPS_NF_JAP_41:0 ""
