志那の州追加、武漢包囲完了

--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -479,3 +479,12 @@
  STATE_1075:0 "ヒマーチャル・プラデーシュ"
  STATE_1076:0 "アーディラーバード"
  STATE_1077:0 "ジャグダルプル"
+ STATE_1078:0 "天門"
+ STATE_1079:0 "荊門"
+ STATE_1080:0 "荊州"
+ STATE_1081:0 "岳陽"
+ STATE_1082:0 "長沙"
+ STATE_1083:0 "湘潭"
+ STATE_1084:0 "株洲"
+ STATE_1085:0 "郴州"
+ STATE_1086:0 "衡陽"
