--- a/localisation/geacps_CHI_l_english.yml
+++ b/localisation/geacps_CHI_l_english.yml
@@ -1,100 +1,204 @@
 ﻿l_english: 
- GEACPS_china.001.title:0 "陣営内の離反"
- GEACPS_china.001.desc:0 "統一戦線はこれまで団結して敵と戦ってきたが、最近の他国の様子は我々に対し非常に反抗的である。少なくとも、円滑な意思疎通と協力を得られていないのは確かである。"
- GEACPS_china.001.a:0 "あっ(察し)"
+ GEACPS_china.001.title:0 "都市疎開の開始"
+ GEACPS_china.001.desc:0 "日本軍の攻撃が激しさを増し、臨時首都武漢にも空襲が日常的に行われたことを受け、住民の疎開が本格的に行われることとなった。すでに政府高官の家族や軍属は重慶へ避難しているが、一般市民の疎開は未だ行われてこなかったため、武漢の主要道路は避難民で混雑しており、一部では兵站への影響が出ているとの情報も出ている。。"
+ GEACPS_china.001.a:0 "遅すぎるかもしれんな"
 
- GEACPS_china.002.title:0 "国内での革命の前兆"
- GEACPS_china.002.desc.1:0 "この戦争に対し統一戦争の参加国のほとんどが不平不満を漏らし始めた。特に新広西派や三馬派は我々の賛成要求にこたえないばかりか、我々との同盟を断ち切り、この危機に対して逃げようとしている。"
- GEACPS_china.002.desc.2:0 "やっぱ統一戦線なんか糞だよって言い始めた。(2回目)"
- GEACPS_china.002.a1:0 "反対勢力が殺せ！"
- GEACPS_china.002.a2:0 "弾圧以外何ができるんだ！"
- GEACPS_china.002.b:0 "ま、まて話せばわかる"
- GEACPS_china.002.c:0 "へ～そ～なんだ～"
-
- GEACPS_china.003.title:0 "統一戦線の崩壊"
- GEACPS_china.003.desc:0 "中華民国の中央政府の必死の統制と交渉にもかかわらず、統一戦線の加盟国は一向に態度を軟化させず、ついには我々に対し一方的に離脱を宣言した。悪名高き大東亜共栄圏を打ち滅ぼす最後ともいえる希望がまた、消えてしまった…"
- GEACPS_china.003.a:0 "まだだ…まだ終わらんよ！"
-
- GEACPS_china.004.title:0 "各国との交渉"
- GEACPS_china.004.desc:0 "僕と契約して仲間になって(て)よ！"って言います。"
- GEACPS_china.004.a:0 "さらなる自治権を認めよう"
- GEACPS_china.004.b:0 "さらなる統一を！"
-
- GEACPS_china.0041.title:0 "中華民国が協力を呼びかけ"
- GEACPS_china.0041.desc:0 "俺たちならきっとできるから、なぁ？"
- GEACPS_china.0041.a:0 "もちろん。"
- GEACPS_china.0041.b:0 "お前たちを信じられない。"
-
- GEACPS_china.0042.title:0 "[From.GetName]が我々に対しさらなる統合を要求"
- GEACPS_china.0042.desc:0 "[From.GetName]と我が国は、統一戦線の重要性を再確認した。彼らは我々に対し自治権を渡すよう要求してきた。"
- GEACPS_china.0042.a:0 "応じよう"
- GEACPS_china.0042.b:0 "お前に従う理由はない！"
-
- GEACPS_china.0043.title:0 "[From.GetName]が我々の呼びかけに応じる"
- GEACPS_china.0043.desc:0 "[From.GetName]は我々の要求を受諾し、自治権を譲渡した。これにより、中華統一戦線はさらなる団結を得た。"
- GEACPS_china.0043.a:0 "偉大な中華万歳"
-
- GEACPS_china.0044.title:0 "[From.GetName]は我々の呼びかけを拒否"
- GEACPS_china.0044.desc:0 "[From.GetName]は我々の要求を拒否した。"
- GEACPS_china.0044.a:0 "悲しい"
+ GEACPS_china.002.title:0 "陣営内の離反"
+ GEACPS_china.002.desc:0 "統一戦線はこれまで団結して敵と戦ってきたが、最近の他国の様子は我々に対し非常に反抗的である。少なくとも、円滑な意思疎通と協力を得られていないのは確かである。"
+ GEACPS_china.002.a:0 "あっ(察し)"
 
 
- GEACPS_china.0045.title:0 "我々はどうすべきか？"
- GEACPS_china.0045.desc:0 "昨今の中央政府の圧力に対し国内では統一戦線に対する疑問の声が上がっている。我々はこのままでいいのだろうか？"
- GEACPS_china.0045.a:0 "中華は一つであるべきだ"
- GEACPS_china.0045.b:0 "私は帰らせてもらう！"
+ GEACPS_china.003.title:0 "武漢の陥落"
+ GEACPS_china.003.desc:0 "わが軍の決死の防衛にもかかわらず、臨時首都武漢は敵軍の手に落ちた。政府首脳部は前日の夜には武漢を出立していたが、武漢の守備隊は最後まで戦闘を続け、便衣兵や町中に仕掛けた罠を活用し頑強に抵抗した。しかしながら、数的劣勢を覆すことができず、昼頃にはかつての中央政府に日章旗と旭日旗が高々と掲げられた。いくつかの部隊は抵抗活動を続けているとの情報もあるが、その信憑性には疑問符をつける必要がある。"
+ GEACPS_china.003.a:0 "覚えていろ！"
 
+ GEACPS_china.004.title:0 "統一戦線の揺らぎ"
+ GEACPS_china.004.desc:0 "武漢の陥落によって、中央政府への求心力の低下は目に見えて大きくなった。特に統一戦線内の結束は明らかに崩壊しつつあり、各国は中央政府に対する不信感をむき出しにしており、この状況を速やかに解消する必要がある。一方で各軍閥の中には親中央政府派も確実に存在しており、彼らを利用し反対派を弾圧するように仕向けることも不可能ではない。いずれにしても、今我々は何らかの決断を迫られている。"
+ GEACPS_china.004.a:0 "弾圧せよ"
+ GEACPS_china.004.b:0 "奴らに構っている余裕などない"
+ GEACPS_china.004.c:0 "対話による解決を"
 
- GEACPS_china.0046.title:0 "[From.GetName]が陣営を離脱！"
- GEACPS_china.0046.desc:0 "[From.GetName]は我々の陣営から離脱した。"
- GEACPS_china.0046.a:0 "なんてことだ"
+ GEACPS_china.005.title:0 "統一戦線の揺らぎ"
+ GEACPS_china.005.desc:0 "親中央政府派によって一時は収まったかに思えた各国の離脱派は我々の目論見に反しその勢いをさらに増している。我々が打つべき方針はどのようなものだろうか"
+ GEACPS_china.005.a:0 "弾圧以外に何をしろと？"
+ GEACPS_china.005.b:0 "もうあきらめるほかないのか…？"
+ GEACPS_china.005.c:0 "対話の姿勢を打ち出したい"
 
+ GEACPS_china.006.title:0 "反乱の予感"
+ GEACPS_china.006.desc.1:0 "弾圧に告ぐ弾圧は、同盟国の信用を完全に失墜させ、もはや結束は不可能になってしまった。"
+ GEACPS_china.006.desc.2:0 "我が国の呼びかけにもかかわらず、統一戦線からすべての国家は脱退し、統一戦線は完全な崩壊を迎えた。"
+ GEACPS_china.006.desc.3:0 "我が国の呼びかけに軍閥は応じ、統一戦線の完全な崩壊は防ぐことができた。"
+ GEACPS_china.006.a:0 "裏切り者め！"
+ GEACPS_china.006.b:0 "我々の努力は水泡に帰した…"
+ GEACPS_china.006.c:0 "できる限りのことはした。"
 
- GEACPS_china.005.title:0 "日本と講和？"
- GEACPS_china.005.desc:0 "日本と講和しますか？それとも単独で戦いますか？"
- GEACPS_china.005.a:0 "あの糞野郎に復讐だ！"
- GEACPS_china.005.b:0 "もう戦争はこりごりだ。"
+ GEACPS_china.007.title:0 "中央政府からの歩み寄り"
+ GEACPS_china.007.desc:0 "中央政府は我々との険悪な関係を改善すべく我々との協議を持ちかけてきた。"
+ GEACPS_china.007.a:0 "受け入れよう"
+ GEACPS_china.007.b:0 "馬鹿にしやがって！"
 
- GEACPS_china.006.title:0 "国内の派閥の蜂起！"
- GEACPS_china.006.desc:0 "一連の崩壊に対してついに中央政府内からも離反の声が上がり、いくつかの派閥が我々に対し攻撃を仕掛けてきた。"
- GEACPS_china.006.a:0 "やめてくれよ！"
+ GEACPS_china.008.title:0 "[FROM.GetName]が交渉を受諾"
+ GEACPS_china.008.desc:0 "[FROM.GetName]は我々との交渉を受け入れた。彼らは自国への不干渉と独立保証を要求してきた。"
+ GEACPS_china.008.a:0 "まあ構わないだろう"
 
- GEACPS_china.007.title:0 "落日の中華"
- GEACPS_china.007.desc:0 "先日の分裂ののち、今度は中央政府内で我々に対しクーデターを起こす勢力が現れた。"
- GEACPS_china.007.a:0 "これどうすればいいんですか…？"
+ GEACPS_china.009.title:0 "[FROM.GetName]が提案を受諾"
+ GEACPS_china.009.desc:0 "[FROM.GetName]が提案を受諾した。"
+ GEACPS_china.009.a:0 "素晴らしい"
 
+ GEACPS_china.010.title:0 "統一戦線の崩壊"
+ GEACPS_china.010.desc:0 "統一戦線は崩壊した。"
+ GEACPS_china.010.a:0 "ふざけやがって！"
 
- GEACPS_china.010.title:0 "講和の提案"
- GEACPS_china.010.desc:0 "結局のところ[ROOT.GetName]は周辺を敵国に囲まれ、このままの状態では戦争に勝利するどころか独立を保つことすら厳しい状況であるといえる。既に離反した国々も日本からの支援が既に始まっているとの知らせも聞かれるようになっている。中央政府の多くの人間はこの絶望的な状況をどう見ているのであろうか…。"
- GEACPS_china.010.a:0 "日本との和平交渉を始める。"
- GEACPS_china.010.b:0 "我々は絶対に屈しない！"
+ GEACPS_china.011.title:0 "四川派の蜂起"
+ GEACPS_china.011.desc:0 "四川派が蜂起した"
+ GEACPS_china.011.a:0 "勘弁してくれ！"
 
- GEACPS_china.011.title:0 "[FROM.GetName]が休戦を求める。"
- GEACPS_china.011.desc:0 "[FROM.GetName]が休戦を求めてきた。しかし我々はただで講和を飲む理由などない。"
- GEACPS_china.011.a:0 "我々に止まる理由などない"
- GEACPS_china.011.b:0 "沿岸州全土の要求"
- GEACPS_china.011.c:0 "我々は寛容だ。"
+ GEACPS_china.012.title:0 "西南派の蜂起"
+ GEACPS_china.012.desc:0 "西南派が蜂起した"
+ GEACPS_china.012.a:0 "どうしろって言うんだ！"
 
- GEACPS_china.012.title:0 "[FROM.GetName]が休戦提案を拒否"
- GEACPS_china.012.desc:0 "[FROM.GetName]が休戦提案を拒否した。"
- GEACPS_china.012.a:0 "もうだめだぁおしまいだぁ"
- GEACPS_china.012.b:0 "なら戦うまでだ！"
+ GEACPS_china.013.title:0 "貴州派の蜂起"
+ GEACPS_china.013.desc:0 "貴州派が蜂起した"
+ GEACPS_china.013.a:0 "此の世のおわりだ"
 
- GEACPS_china.013.title:0 "[FROM.GetName]が休戦提案を承諾"
- GEACPS_china.013.desc:0 "[FROM.GetName]が休戦提案を承諾した。ただし沿岸州及びいくつかの州は割譲される。"
- GEACPS_china.013.a:0 "平和のための犠牲だ。"
+ GEACPS_china.014.title:0 "日本との講和"
+ GEACPS_china.014.desc:0 "日本との講和を望む声が中央政府内からも出てきた。"
+ GEACPS_china.014.a:0 "もうこの手しかあるまい"
+ GEACPS_china.014.b:0 "馬鹿野郎お前俺は勝つぞ！"
 
- GEACPS_china.014.title:0 "[FROM.GetName]が完全休戦を承諾"
- GEACPS_china.014.desc:0 "[FROM.GetName]と我々は今や完全に休戦した。"
- GEACPS_china.014.a:0 "助かった…"
+ GEACPS_china.015.title:0 "蒋介石の演説"
+ GEACPS_china.015.desc:0 "蒋介石が演説を行い、[ROOT.GetName]の結束と日本軍に対する抵抗を呼びかけた。"
+ GEACPS_china.015.a:0 "遅すぎるかもしれんな"
+
+ GEACPS_china.016.title:0 "[FROM.GetName]が講和を提案"
+ GEACPS_china.016.desc:0 "[FROM.GetName]は我々との講和に応じたいと伝えてきた。"
+ GEACPS_china.016.a:0 "すべてなかったことに使用"
+ GEACPS_china.016.b:0 "タダで済むと思っているのか？"
+ GEACPS_china.016.c:0 "奴らを許すな"
+
+ GEACPS_china.017.title:0 "日本が講和を拒否"
+ GEACPS_china.017.desc:0 "日本は我が国との講和を拒否した。"
+ GEACPS_china.017.a:0 "勘弁してくれよ！"
+
+ GEACPS_china.018.title:0 "日本は講和を受諾"
+ GEACPS_china.018.desc:0 "日本は講和を受諾した。ただしいくつかの州は割譲される。"
+ GEACPS_china.018.a:0 "仕方ない"
+
+ GEACPS_china.019.title:0 "日本が白紙講和を受諾"
+ GEACPS_china.019.desc:0 "日本は我が国との白紙講和を受け入れた。"
+ GEACPS_china.019.a:0 "マジで？"
+
+ GEACPS_china.020.title:0 "反対派への対応"
+ GEACPS_china.020.desc:0 "統一戦線をより結束させるために何をすべきだろうか"
+ GEACPS_china.020.a:0 "自治権の拡大を認める"
+ GEACPS_china.020.b:0 "警察権以外の譲渡を要求"
+
+ GEACPS_china.021.title:0 "戦線を離脱？"
+ GEACPS_china.021.desc:0 "中央政府は我らにさらなる自治権を譲渡した。国内ではさらに陣営からの脱退を望む声が出ている。"
+ GEACPS_china.021.a:0 "陣営よさらば！"
+
+ GEACPS_china.022.title:0 "日本との講和？"
+ GEACPS_china.022.desc:0 "我々は現在日本との戦争中であるが、講和を望む声も上がっている"
+ GEACPS_china.022.a:0 "講和しよう"
+ GEACPS_china.022.a:0 "奴らを許すつもりはない"
+
+ GEACPS_china.023.title:0 "[FROM.GetName]が我々との講和を提案"
+ GEACPS_china.023.desc:0 "[From.GetName]は我々との白紙講和を提案してきた。"
+ GEACPS_china.023.a:0 "我々に断る義理はない"
+
+ GEACPS_china.024.title:0 "[FROM.GetName]との白紙講和が成立"
+ GEACPS_china.024.desc:0 "[FROM.GetName]との白紙講和が成立した。"
+ GEACPS_china.024.a:0 "素晴らしい…"
+
+ GEACPS_china.025.title:0 "中華民国との戦争"
+ GEACPS_china.025.desc:0 "中華民国へ宣戦布告できる"
+ GEACPS_china.025.a:0 "素晴らしい"
+ GEACPS_china.025.b:0 "やめておこう"
+
+ GEACPS_china.026.title:0 "中華民国との戦争"
+ GEACPS_china.026.desc:0 "中華民国へ宣戦布告できる"
+ GEACPS_china.026.a:0 "素晴らしい"
+ GEACPS_china.026.b:0 "やめておこう"
+
+ GEACPS_china.027.title:0 "大東亜共栄圏に勧誘"
+ GEACPS_china.027.desc:0 "大東亜共栄圏に[From.GetName]を招待する"
+ GEACPS_china.027.a:0 "いいね"
+ GEACPS_china.027.b:0 "やめておこう"
+
+ GEACPS_china.028.title:0 "[FROM.GetName]が大東亜共栄圏に加入"
+ GEACPS_china.028.desc:0 "[FROM.GetName]が大東亜共栄圏に加入"
+ GEACPS_china.028.a:0 "(∩´∀｀)∩"
+
+ GEACPS_china.029.title:0 "[FROM.GetName]が統治権の譲渡を要求"
+ GEACPS_china.029.desc:0 "[FROM.GetName]が我々に対し統治権を要求してきた。受け入れれば我々は[FROM.GetName]の傀儡国となる"
+ GEACPS_china.029.a:0 "いいだろう"
+ GEACPS_china.029.b:0 "ふざけるな！"
+
+ GEACPS_china.030.title:0 "[FROM.GetName]が我々の提案を了承"
+ GEACPS_china.030.desc:0 "[FROM.GetName]が我々の提案を了承した。これより[FROM.GetName]は我々の完全統治下である。"
+ GEACPS_china.030.a:0 "素晴らしい"
+
+ GEACPS_china.031.title:0 "四川派を排除"
+ GEACPS_china.031.desc:0 "我々は孤独で絶望的な戦いであったにもかかわらず、敵勢力の一角を崩した。我々の戦いは終わらない"
+ GEACPS_china.031.a:0 "中華民国的栄耀!"
+
+ GEACPS_china.032.title:0 "西南派を排除"
+ GEACPS_china.032.desc:0 "我々は孤独で絶望的な戦いであったにもかかわらず、敵勢力の一角を崩した。我々の戦いは終わらない"
+ GEACPS_china.032.a:0 "中華民国的栄耀!"
+
+ GEACPS_china.033.title:0 "貴州派を排除"
+ GEACPS_china.033.desc:0 "我々は孤独で絶望的な戦いであったにもかかわらず、敵勢力の一角を崩した。我々の戦いは終わらない"
+ GEACPS_china.033.a:0 "中華民国的栄耀!"
+
+ GEACPS_china.034.title:0 "[FROM.GetName]が統一戦線を離脱"
+ GEACPS_china.034.desc:0 "[FROM.GetName]が統一戦線を離脱した！"
+ GEACPS_china.034.a:0 "裏切り者め！"
+
+ GEACPS_china.035.title:0 "交渉の成功"
+ GEACPS_china.035.desc:0 "[FROM.GetName]は我々との協力関係を維持する方針を示した。"
+ GEACPS_china.035.a:0 "すばらしい…"
 
 #ideas
- GEACPS_IDEA_CHI_1:0 "反乱の抑圧"
- GEACPS_IDEA_CHI_1_desc:0 ""
- GEACPS_IDEA_CHI_2:0 "反乱の抑圧"
- GEACPS_IDEA_CHI_2_desc:0 ""
- GEACPS_IDEA_CHI_3:0 "反乱の放置"
- GEACPS_IDEA_CHI_3_desc:0 ""
 
+ GEACPS_idea_CHI_uneasy_unity:0 "不穏な結束"
+ GEACPS_idea_CHI_uneasy_unity_desc:0 "-中華統一戦線-聞こえはいいが実際のところ崩壊する運命が定まっているも同然である。"
+ GEACPS_idea_CHI_suppression_of_rebellion:0 "反乱の抑圧"
+ GEACPS_idea_CHI_suppression_of_rebellion_desc:0 ""
+ GEACPS_idea_CHI_pressure_from_allies:0 "同盟国からの圧力"
+ GEACPS_idea_CHI_pressure_from_allies_desc:0 ""
+ GEACPS_idea_CHI_incompetent_government:0 "無能な政府"
+ GEACPS_idea_CHI_incompetent_government_desc:0 ""
+ GEACPS_idea_CHI_chinese_united_front:0 "中華統一戦線"
+ GEACPS_idea_CHI_chinese_united_front_desc:0 ""
+ GEACPS_idea_CHI_chinese_united_front1:0 "中華統一戦線"
+ GEACPS_idea_CHI_chinese_united_front1_desc:0 ""
+ GEACPS_idea_CHI_chinese_united_front2:0 "中華統一戦線"
+ GEACPS_idea_CHI_chinese_united_front2_desc:0 ""
+ GEACPS_idea_CHI_chinese_united_front3:0 "中華統一戦線"
+ GEACPS_idea_CHI_chinese_united_front3_desc:0 ""
+ GEACPS_idea_CHI_chinese_united_front4:0 "中華統一戦線"
+ GEACPS_idea_CHI_chinese_united_front4_desc:0 ""
 
- TIB_CHI_territory:0 "カンゼを占領した"
+ GEACPS_idea_CHI_first_of_all_unity:0 "ひとまずの団結"
+ GEACPS_idea_CHI_first_of_all_unity_desc:0 ""
+ GEACPS_idea_CHI_the_only_one_china:0 "ただ一つの中華"
+ GEACPS_idea_CHI_the_only_one_china_desc:0 ""
+ GEACPS_idea_CHI_failed_states:0 "失敗国家"
+ GEACPS_idea_CHI_failed_states_desc:0 ""
+
+ GEACPS_idea_CHI_phoenix:0 "不死鳥"
+ GEACPS_idea_CHI_phoenix_desc:0 ""
+ GEACPS_idea_CHI_counterattack:0 "反撃の狼煙"
+ GEACPS_idea_CHI_counterattack_desc:0 ""
+ GEACPS_idea_CHI_road_to_reunification1:0 "再統一への道"
+ GEACPS_idea_CHI_road_to_reunification1_desc:0 ""
+ GEACPS_idea_CHI_road_to_reunification2:0 "再統一への道"
+ GEACPS_idea_CHI_road_to_reunification2_desc:0 ""
+ GEACPS_idea_CHI_road_to_reunification3:0 "再統一への道"
+ GEACPS_idea_CHI_road_to_reunification3_desc:0 ""
+ GEACPS_idea_CHI_road_to_reunification4:0 "再統一への道"
+ GEACPS_idea_CHI_road_to_reunification4_desc:0 ""
+
+#評価
+ CHI_kind_peace:0 "寛容な講和"
+ CHI_pressure_on_our_country:0 "我が国に対する圧力"
