--- a/localisation/geacps_USA_l_english.yml
+++ b/localisation/geacps_USA_l_english.yml
@@ -78,3 +78,60 @@
  USA_ACW.17.a:0 "反逆だ！ あいつらを倒せ！"
  
  ###focuses
+USA_rZfqVDun:0 "古の栄光"
+USA_rZfqVDun_desc:0 ""
+USA_FMkZhVSN:0 "国家安定法"
+USA_FMkZhVSN_desc:0 ""
+USA_ysSgGApJ:0 "国家治安維持法"
+USA_ysSgGApJ_desc:0 ""
+USA_NFthJBqV:0 "徹底抗戦"
+USA_NFthJBqV_desc:0 ""
+USA_NRCtnZud:0 "連邦政府の復古"
+USA_NRCtnZud_desc:0 ""
+USA_1947:0 "1947年臨時大統領選挙"
+USA_1947_desc:0 ""
+USA_YTNWeUmo:0 "シカゴ会議"
+USA_YTNWeUmo_desc:0 ""
+USA_LGmRryNu:0 "民間経済の復興"
+USA_LGmRryNu_desc:0 ""
+USA_GVtuUHzL:0 "第三次インディアン移住法"
+USA_GVtuUHzL_desc:0 ""
+USA_BPtVqWUN:0 "株式市場の２４時間運用"
+USA_BPtVqWUN_desc:0 ""
+USA_KUYDTjwM:0 "ワシントンを復興"
+USA_KUYDTjwM_desc:0 ""
+USA_ZisxIvRb:0 "投資家を歓迎"
+USA_ZisxIvRb_desc:0 ""
+USA_cjyeUuBT:0 "復興庁を設立"
+USA_cjyeUuBT_desc:0 ""
+USA_bBLarGUk:0 "世界の工場"
+USA_bBLarGUk_desc:0 ""
+USA_uMAqBOFS:0 "奨学金制度の拡充"
+USA_uMAqBOFS_desc:0 ""
+USA_mqkEHUue:0 "日米不干渉条約"
+USA_mqkEHUue_desc:0 ""
+USA_AvYGCQjJ:0 "アイルランドを保護"
+USA_AvYGCQjJ_desc:0 ""
+USA_TUGNPdYW:0 "大陸会議"
+USA_TUGNPdYW_desc:0 ""
+USA_dkqRVcNA:0 "独立心を煽る"
+USA_dkqRVcNA_desc:0 ""
+USA_kthqLbyc:0 "パリ会談"
+USA_kthqLbyc_desc:0 ""
+USA_NrYmEwLg:0 "我は不滅なり"
+USA_NrYmEwLg_desc:0 ""
+USA_TAjqDcBm:0 "日本を粉砕"
+USA_TAjqDcBm_desc:0 ""
+USA_KVkxutMl:0 "ダウンフォール作戦"
+USA_KVkxutMl_desc:0 ""
+USA_ArxNbIiK:0 "全体主義を禁止"
+USA_ArxNbIiK_desc:0 ""
+USA_eUKChxfE:0 "外交的解決"
+USA_eUKChxfE_desc:0 ""
+USA_pYXAQPKB:0 "軍事侵攻"
+USA_pYXAQPKB_desc:0 ""
+USA_EpikVWRw:0 "旧宗主国の打倒"
+USA_EpikVWRw_desc:0 ""
+USA_lGuKYiMp:0 "歴史的和解"
+USA_lGuKYiMp_desc:0 ""
+
