--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -33,17 +33,17 @@
  JAP_Expansion_of_Naval_Arsenal:0 "海軍工廠の増設"
  JAP_Reconciliation_with_the_Imperialists:0 "皇道派との和解"
  JAP_Tacit_approval_of_coup_preparations:0 "クーデター準備の黙認"
- JAP_Council_of_Ministers:0 "重臣会議"
+ JAP_Council_of_Ministers:0 "重臣会議の開催"
  JAP_Implementing:0 "施行！"
  JAP_Recognition:0 "承認！"
  JAP_appointment_by_the_emperor:0 "天皇による任命"
  JAP_Conclusion_of_the_Congress:0 "議会の終結"
- GEACPS_NF_JAP_39:0 ""
- GEACPS_NF_JAP_40:0 ""
- GEACPS_NF_JAP_41:0 ""
- GEACPS_NF_JAP_42:0 ""
- GEACPS_NF_JAP_43:0 ""
- GEACPS_NF_JAP_44:0 ""
+ JAP_first_work:0 "初仕事"
+ JAP_foreign_policy:0 "対外政策"
+ JAP_East_Progressive_Theory:0 "東進論"
+ JAP_Westward_Movement_Theory:0 "西進論"
+ JAP_Nanjin_Theory:0 "南進論"
+ JAP_The_Northward_Movement:0 "北進論"
  GEACPS_NF_JAP_45:0 ""
  GEACPS_NF_JAP_46:0 ""
  GEACPS_NF_JAP_47:0 ""
