イベント作成

--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -126,3 +126,10 @@
  GEACPS_IDEA_JAP_2:0 "参謀本部と軍令部の対立"
  GEACPS_IDEA_JAP_3:0 "逼迫した財政"
  GEACPS_IDEA_JAP_4:0 "布哇王国との関係"
+#event
+ GEACPS_japan.001.title:0 "山本五十六の後継者"
+ GEACPS_japan.001.desc:0 "山本五十六の後継者として新たに海軍長官を選任しなければならない。"
+ GEACPS_japan.001.a:0 "航空主兵主義者を据え置く"
+ GEACPS_japan.001.b:0 "大艦巨砲主義者を再び"
+ GEACPS_japan.001.c:0 "夜戦第一主義者を探し出す"
+
