--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -127,8 +127,8 @@
  GEACPS_IDEA_JAP_3:0 "逼迫した財政"
  GEACPS_IDEA_JAP_4:0 "布哇王国との関係"
 #event
- GEACPS_japan.001.title:0 "山本五十六の後継者"
- GEACPS_japan.001.desc:0 "山本五十六の後継者として新たに海軍長官を選任しなければならない。"
+ GEACPS_japan.001.title:0 "海軍を主導する人材の選定"
+ GEACPS_japan.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
  GEACPS_japan.001.a:0 "航空主兵主義者を据え置く"
  GEACPS_japan.001.b:0 "大艦巨砲主義者を再び"
  GEACPS_japan.001.c:0 "夜戦第一主義者を探し出す"
