--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -44,14 +44,14 @@
  JAP_Westward_Movement_Theory:0 "西進論"
  JAP_Nanjin_Theory:0 "南進論"
  JAP_The_Northward_Movement:0 "北進論"
- GEACPS_NF_JAP_45:0 ""
- GEACPS_NF_JAP_46:0 ""
- GEACPS_NF_JAP_47:0 ""
- GEACPS_NF_JAP_48:0 ""
- GEACPS_NF_JAP_49:0 ""
- GEACPS_NF_JAP_50:0 ""
- GEACPS_NF_JAP_51:0 ""
- GEACPS_NF_JAP_52:0 ""
+ JAP_Supporting_the_Republic_of_Washington:0 "ワシントン共和国を支援"
+ JAP_Supporting_the_Republic_of_California:0 "カルフォルニア共和国を支援"
+ JAP_Expand_the_co_prosperity_sphere_to_the_other_side_of_the_river:0 "共栄圏を対岸に拡大"
+ JAP_Intervention_in_civil_war:0 "内戦に介入"
+ JAP_Alaskan_Expedition:0 "アラスカ出兵"
+ JAP_Formation_of_the_Governing_Board_of_the_United_States_of_America:0 "亜米利加統治委員会の発足"
+ JAP_Dealing_with_a_dying_sick_man_on_the_other_side_of_the_river:0 "対岸の瀕死の病人に対処"
+ JAP_Expanded_governance_to_all_of_sub_America:0 "亜米利加全土に統治を拡大"
  GEACPS_NF_JAP_53:0 ""
  GEACPS_NF_JAP_54:0 ""
  GEACPS_NF_JAP_55:0 ""
