消えたの書き直した

--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -101,6 +101,20 @@
  GEACPS_NF_JAP_99:0 ""
  GEACPS_NF_JAP_100:0 ""
  GEACPS_NF_JAP_army_00:0 "軍部の統一"
+ GEACPS_NF_JAP_navy_01:0 "これからの帝国海軍に向き合う"
+ GEACPS_NF_JAP_navy_capital_ship:0 "主力艦の整備"
+ GEACPS_NF_JAP_navy_BB_01:0 "新時代における戦艦とは何か"
+ GEACPS_NF_JAP_navy_SHBB_01:0 "超大型戦艦の火力でねじ伏せる"
+ GEACPS_NF_JAP_navy_Super_Yamato_Class:0 "超大和型の建造"
+ GEACPS_NF_JAP_navy_BB_02:0 "高速戦艦こそが時代の覇者だ"
+ GEACPS_NF_JAP_navy_BB_03:0 "金剛型の代艦"
+ GEACPS_NF_JAP_navy_CV_01:0 "正規空母の集中運用"
+ GEACPS_NF_JAP_navy_CV_02:0 "質を高める"
+ GEACPS_NF_JAP_navy_CV_03:0 "装甲空母による旧式艦の置き換え"
+ GEACPS_NF_JAP_Battle_carrier:0 "航空戦艦の実用化"
+ GEACPS_NF_JAP_navy_LCV_01:0 "軽空母艦隊"
+ GEACPS_NF_JAP_navy_LCV_02:0 "数こそ正義"
+ GEACPS_NF_JAP_navy_LCV_03:0 "格納庫の捻出 
  GEACPS_NF_JAP_navy_01:0 "海軍予算の調達"
  GEACPS_NF_JAP_navy_02:0 "超大和型の建造"
  GEACPS_NF_JAP_navy_03:0 "空母と戦艦の併用"
