--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -269,47 +269,47 @@
  STATE_865:0 "チャンディーガル"
  STATE_866:0 "ナーグプル"
  STATE_867:0 "キシャンガンジ"
- STATE_868:0 ""
- STATE_869:0 ""
- STATE_870:0 ""
- STATE_871:0 ""
- STATE_872:0 ""
- STATE_873:0 ""
- STATE_874:0 ""
- STATE_875:0 ""
- STATE_876:0 ""
- STATE_877:0 ""
- STATE_878:0 ""
- STATE_879:0 ""
- STATE_880:0 ""
- STATE_881:0 ""
- STATE_882:0 ""
- STATE_883:0 ""
- STATE_884:0 ""
- STATE_885:0 ""
- STATE_886:0 ""
- STATE_887:0 ""
- STATE_888:0 ""
- STATE_889:0 ""
- STATE_890:0 ""
- STATE_891:0 ""
- STATE_892:0 ""
- STATE_893:0 ""
- STATE_894:0 ""
- STATE_895:0 ""
- STATE_896:0 ""
- STATE_897:0 ""
- STATE_898:0 ""
- STATE_899:0 ""
- STATE_900:0 ""
- STATE_901:0 ""
- STATE_902:0 ""
- STATE_903:0 ""
- STATE_904:0 ""
- STATE_905:0 ""
- STATE_906:0 ""
- STATE_907:0 ""
- STATE_908:0 ""
+ STATE_868:0 "烏蘭烏拉"
+ STATE_869:0 "スルハンダリヤ"
+ STATE_870:0 "カシュカダリヤ"
+ STATE_871:0 "ブハラ"
+ STATE_872:0 "チェリャビンスク"
+ STATE_873:0 "アバ"
+ STATE_874:0 "湛江"
+ STATE_875:0 "トゥラン"
+ STATE_876:0 "ハタイ"
+ STATE_877:0 "イオニア諸島"
+ STATE_878:0 "中央マケドニア"
+ STATE_879:0 "千葉"
+ STATE_880:0 "ヴァッレ・ダオスタ"
+ STATE_881:0 "リグーリア"
+ STATE_882:0 "曲靖"
+ STATE_883:0 "保山"
+ STATE_884:0 "遵義"
+ STATE_885:0 "銅仁"
+ STATE_886:0 "懐化"
+ STATE_887:0 "恩施"
+ STATE_888:0 "チュミカン"
+ STATE_889:0 "ユダヤ"
+ STATE_890:0 "アマザル"
+ STATE_891:0 "トゥグロ"
+ STATE_892:0 "シーサンパンナ"
+ STATE_893:0 "呂梁"
+ STATE_894:0 "ジョホール"
+ STATE_895:0 "関東"
+ STATE_896:0 "エリー"
+ STATE_897:0 "南通"
+ STATE_898:0 "聊城"
+ STATE_899:0 "済源"
+ STATE_900:0 "襄陽"
+ STATE_901:0 "宜春"
+ STATE_902:0 "臨汾"
+ STATE_903:0 "スエズ"
+ STATE_904:0 "北シュレースヴィヒ"
+ STATE_905:0 "クフラ"
+ STATE_906:0 "チュクチ"
+ STATE_907:0 "レンスク"
+ STATE_908:0 "マガダン"
  STATE_909:0 "タス"
  STATE_910:0 ""
  STATE_911:0 ""
