--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -351,46 +351,46 @@
  STATE_947:0 ""
  STATE_948:0 ""
  STATE_949:0 ""
- STATE_950:0 ""
- STATE_951:0 ""
- STATE_952:0 ""
- STATE_953:0 ""
- STATE_954:0 ""
- STATE_955:0 ""
- STATE_956:0 ""
- STATE_957:0 ""
- STATE_958:0 ""
- STATE_959:0 ""
- STATE_960:0 ""
- STATE_961:0 ""
- STATE_962:0 ""
- STATE_963:0 ""
- STATE_964:0 ""
- STATE_965:0 ""
- STATE_966:0 ""
- STATE_967:0 ""
- STATE_968:0 ""
- STATE_969:0 ""
- STATE_970:0 ""
- STATE_971:0 ""
- STATE_972:0 ""
- STATE_973:0 ""
- STATE_974:0 ""
- STATE_975:0 ""
- STATE_976:0 ""
- STATE_977:0 ""
- STATE_978:0 ""
- STATE_979:0 ""
- STATE_980:0 ""
- STATE_981:0 ""
- STATE_982:0 ""
- STATE_983:0 ""
- STATE_984:0 ""
- STATE_985:0 ""
- STATE_986:0 ""
- STATE_987:0 ""
- STATE_988:0 ""
- STATE_989:0 ""
+ STATE_950:0 "ペナン"
+ STATE_951:0 "ケダ"
+ STATE_952:0 "プルリス"
+ STATE_953:0 "サバ"
+ STATE_954:0 "イーサーン"
+ STATE_955:0 "タイ北部"
+ STATE_956:0 "モン"
+ STATE_957:0 "カレン"
+ STATE_958:0 "バゴー＝マグウェ"
+ STATE_959:0 "チン"
+ STATE_960:0 "エーヤワディ"
+ STATE_961:0 "イスラエル"
+ STATE_962:0 "プッリャ"
+ STATE_963:0 "バジリカータ"
+ STATE_964:0 "カシュガル"
+ STATE_965:0 "イリ・カザフ"
+ STATE_966:0 "ボルタラ・モンゴル"
+ STATE_967:0 "タルバガタイ"
+ STATE_968:0 "カラマイ"
+ STATE_969:0 "昌吉"
+ STATE_970:0 "ラダック"
+ STATE_971:0 "デチェン"
+ STATE_972:0 "怒江"
+ STATE_973:0 "麗江"
+ STATE_974:0 "臨滄"
+ STATE_975:0 "普洱"
+ STATE_976:0 "楚雄"
+ STATE_977:0 "玉渓"
+ STATE_978:0 "昭通"
+ STATE_979:0 "紅河"
+ STATE_980:0 "文山"
+ STATE_981:0 "六盤水"
+ STATE_982:0 "黔西南"
+ STATE_983:0 "安順"
+ STATE_984:0 "貴陽"
+ STATE_985:0 "黔南"
+ STATE_986:0 "東京"
+ STATE_987:0 "パリ"
+ STATE_988:0 "ロンドン"
+ STATE_989:0 "ワシントンD.C."
  STATE_990:0 "モスクワ市"
  STATE_991:0 "西ベルリン"
  STATE_992:0 "東ベルリン"
