--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -311,46 +311,46 @@
  STATE_907:0 "レンスク"
  STATE_908:0 "マガダン"
  STATE_909:0 "タス"
- STATE_910:0 ""
- STATE_911:0 ""
- STATE_912:0 ""
- STATE_913:0 ""
- STATE_914:0 ""
- STATE_915:0 ""
- STATE_916:0 ""
- STATE_917:0 ""
- STATE_918:0 ""
- STATE_919:0 ""
- STATE_920:0 ""
- STATE_921:0 ""
- STATE_922:0 ""
- STATE_923:0 ""
- STATE_924:0 ""
- STATE_925:0 ""
- STATE_926:0 ""
- STATE_927:0 ""
- STATE_928:0 ""
- STATE_929:0 ""
- STATE_930:0 ""
- STATE_931:0 ""
- STATE_932:0 ""
- STATE_933:0 ""
- STATE_934:0 ""
- STATE_935:0 ""
- STATE_936:0 ""
- STATE_937:0 ""
- STATE_938:0 ""
- STATE_939:0 ""
- STATE_940:0 ""
- STATE_941:0 ""
- STATE_942:0 ""
- STATE_943:0 ""
- STATE_944:0 ""
- STATE_945:0 ""
- STATE_946:0 ""
- STATE_947:0 ""
- STATE_948:0 ""
- STATE_949:0 ""
+ STATE_910:0 "エニセイスク"
+ STATE_911:0 "東モンゴル"
+ STATE_912:0 "西モンゴル"
+ STATE_913:0 "北モンゴル"
+ STATE_914:0 "ゴビ"
+ STATE_915:0 "オホーツク"
+ STATE_916:0 "スンタル"
+ STATE_917:0 "ツルハンスク"
+ STATE_918:0 "セヴェロ＝エニセイスキー"
+ STATE_919:0 "モティギノ"
+ STATE_920:0 "ボグチャニ"
+ STATE_921:0 "ケジュマ"
+ STATE_922:0 "秋田"
+ STATE_923:0 "福島"
+ STATE_924:0 "京都"
+ STATE_925:0 "三重"
+ STATE_926:0 "兵庫"
+ STATE_927:0 "岡山"
+ STATE_928:0 "松江"
+ STATE_929:0 "愛媛"
+ STATE_930:0 "高知"
+ STATE_931:0 "福岡"
+ STATE_932:0 "熊本"
+ STATE_933:0 "鹿児島"
+ STATE_934:0 "オレニョーク"
+ STATE_935:0 "オリョークミンスク"
+ STATE_936:0 "ネリュングリ"
+ STATE_937:0 "アルダン"
+ STATE_938:0 "ウスチ＝マヤ"
+ STATE_939:0 "トンポ"
+ STATE_940:0 "モマ"
+ STATE_941:0 "ヴェルフネコルィムスク"
+ STATE_942:0 "スレドネコルィムスク"
+ STATE_943:0 "コマンドルスキー諸島"
+ STATE_944:0 "パハン"
+ STATE_945:0 "セランゴール"
+ STATE_946:0 "ヌグリ・スンビラン"
+ STATE_947:0 "ムラカ"
+ STATE_948:0 "トレンガヌ"
+ STATE_949:0 "ペラ"
  STATE_950:0 "ペナン"
  STATE_951:0 "ケダ"
  STATE_952:0 "プルリス"
