日海関係の色々

--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -114,7 +114,12 @@
  GEACPS_NF_JAP_Battle_carrier:0 "航空戦艦の実用化"
  GEACPS_NF_JAP_navy_LCV_01:0 "軽空母艦隊"
  GEACPS_NF_JAP_navy_LCV_02:0 "数こそ正義"
- GEACPS_NF_JAP_navy_LCV_03:0 "格納庫の捻出 
+ GEACPS_NF_JAP_navy_LCV_03:0 "格納庫の捻出"
+ GEACPS_NF_JAP_navy_CA_01:0 "重巡洋艦の在り方を問う"
+ GEACPS_NF_JAP_navy_CA_02:0 "対空性能の向上"
+ GEACPS_NF_JAP_navy_CA_03:0 "旧型艦を置き換える"
+ GEACPS_NF_JAP_navy_CAC:0 "航空巡洋艦の新規開発"
+ GEACPS_NF_JAP_navy_Auxiliary_ship:0 "補助艦の補充計画"
  GEACPS_NF_JAP_navy_01:0 "海軍予算の調達"
  GEACPS_NF_JAP_navy_02:0 "超大和型の建造"
  GEACPS_NF_JAP_navy_03:0 "空母と戦艦の併用"
