ymlへんしゅー

--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -120,6 +120,9 @@
  GEACPS_NF_JAP_navy_CA_03:0 "旧型艦を置き換える"
  GEACPS_NF_JAP_navy_CAC:0 "航空巡洋艦の新規開発"
  GEACPS_NF_JAP_navy_Auxiliary_ship:0 "補助艦の補充計画"
+ GEACPS_NF_JAP_navy_CL_01:0 "軽巡洋艦の未来"
+ GEACPS_NF_JAP_navy_TCL_01:0 "水雷戦隊の旗艦"
+ GEACPS_NF_JAP_navy_TCL_02:0 "改阿賀野型の再建造"
  GEACPS_NF_JAP_navy_01:0 "海軍予算の調達"
  GEACPS_NF_JAP_navy_02:0 "超大和型の建造"
  GEACPS_NF_JAP_navy_03:0 "空母と戦艦の併用"
