--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -132,4 +132,22 @@
  GEACPS_japan.001.a:0 "航空主兵主義者を据え置く"
  GEACPS_japan.001.b:0 "大艦巨砲主義者を再び"
  GEACPS_japan.001.c:0 "夜戦第一主義者を探し出す"
+ GEACPS_japan.002.title:0 "[year]年国策研究大綱"
+ GEACPS_japan.002.desc:0 "新たな国策研究の方針を立てなければいけない"
+ GEACPS_japan.002.a:0 "軍事研究"
+ GEACPS_japan.002.b:0 "民間研究"
+ GEACPS_japan.003.title:0 "[year]年国策研究大綱"
+ GEACPS_japan.003.desc:0 "軍事研究の促進において特に重視すべきことはなんであるか。"
+ GEACPS_japan.003.a:0 "陸軍"
+ GEACPS_japan.003.b:0 "海軍"
+ GEACPS_japan.003.c:0 "空軍"
+
+
+#ディシジョン
+	#category
+ JAP_national_policy_research_outline:0 "国策研究大綱"
+ JAP_national_policy_research_outline_desc:0 "研究こそすべて！\n頑張ろう\n"
+	#
+ national_policy_research_outline:0 "[year]国策研究大綱"
+ national_policy_research_outline_desc:0 "国策研究大綱"
 
