--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -118,11 +118,24 @@
  GEACPS_NF_JAP_navy_CA_01:0 "重巡洋艦の在り方を問う"
  GEACPS_NF_JAP_navy_CA_02:0 "対空性能の向上"
  GEACPS_NF_JAP_navy_CA_03:0 "旧型艦を置き換える"
- GEACPS_NF_JAP_navy_CAC:0 "航空巡洋艦の新規開発"
+ GEACPS_NF_JAP_navy_CAC:0 "航空巡洋艦の正式採用"
  GEACPS_NF_JAP_navy_Auxiliary_ship:0 "補助艦の補充計画"
  GEACPS_NF_JAP_navy_CL_01:0 "軽巡洋艦の未来"
  GEACPS_NF_JAP_navy_TCL_01:0 "水雷戦隊の旗艦"
  GEACPS_NF_JAP_navy_TCL_02:0 "改阿賀野型の再建造"
+ GEACPS_NF_JAP_navy_ACL_01:0 "空を護る艦"
+ GEACPS_NF_JAP_navy_ACL_02:0 ""
+ GEACPS_NF_JAP_navy_DD_01:0 "駆逐隊の再編成"
+ GEACPS_NF_JAP_navy_ADD_01:0 "防空駆逐艦の改良"
+ GEACPS_NF_JAP_navy_Proximity_fuze:0 "近接信管の開発"
+ GEACPS_NF_JAP_navy_DD_02:0 "船団護衛型駆逐艦の追加建造"
+ GEACPS_NF_JAP_navy_DD_03:0 "水中聴音機の新規開発"
+ GEACPS_NF_JAP_navy_ADD_02:0 "駆逐艦建造の更なる効率化"
+ GEACPS_NF_JAP_navy_SS_01:0 "100隻の潜水艦"
+ GEACPS_NF_JAP_navy_SS_02:0 "U-BOATの再現"
+ GEACPS_NF_JAP_navy_SS_03:0 "世界最大の潜水艦"
+ GEACPS_NF_JAP_navy_torpedo:0 "魚雷の強化"
+ GEACPS_NF_JAP_navy_modern_fleets:0 "現代型艦隊へ"
  GEACPS_NF_JAP_navy_01:0 "海軍予算の調達"
  GEACPS_NF_JAP_navy_02:0 "超大和型の建造"
  GEACPS_NF_JAP_navy_03:0 "空母と戦艦の併用"
