--- a/localisation/_geacps_loading_tips_l_english.yml
+++ b/localisation/_geacps_loading_tips_l_english.yml
@@ -66,8 +66,8 @@
  LOADING_TIP_64: "世の中に寛容の形態は3種類存在する。1つは誠実な寛容、1つは不誠実な寛容、そして混沌だ。\n- ベルリン攻防戦中にソ連軍兵士が発見したドイツ兵の手記より"
  LOADING_TIP_65: "アメリカが何故負けたか？自身を過信していたからさ。\n- ダグラス・マッカーサー"
  LOADING_TIP_66: "もし今日のイギリスに悔やむべきことがあるとするならば、シンガポールの失陥ほどそれに値する出来事は存在しないだろう。\n- シャルル・ド・ゴール"
- LOADING_TIP_67: "\n- "
- LOADING_TIP_68: "\n- "
+ LOADING_TIP_67: "大衆の考える最も身近な恐怖は変化することである。\n- ウィンストン・チャーチル"
+ LOADING_TIP_68: "不誠実な人間が真実を言ったところで返ってくるのは湿生だけだ。\n- ウェンデル・L・ウィルキー"
  LOADING_TIP_69: "\n- "
  LOADING_TIP_70: "\n- "
  LOADING_TIP_71: "\n- "
