--- a/localisation/_geacps_loading_tips_l_english.yml
+++ b/localisation/_geacps_loading_tips_l_english.yml
@@ -67,7 +67,7 @@
  LOADING_TIP_65: "アメリカが何故負けたか？自身を過信していたからさ。\n- ダグラス・マッカーサー"
  LOADING_TIP_66: "もし今日のイギリスに悔やむべきことがあるとするならば、シンガポールの失陥ほどそれに値する出来事は存在しないだろう。\n- シャルル・ド・ゴール"
  LOADING_TIP_67: "大衆の考える最も身近な恐怖は変化することである。\n- ウィンストン・チャーチル"
- LOADING_TIP_68: "不誠実な人間が真実を言ったところで返ってくるのは湿生だけだ。\n- ウェンデル・L・ウィルキー"
+ LOADING_TIP_68: "不誠実な人間が真実を言ったところで返ってくるのは失笑だけだ。\n- ウェンデル・L・ウィルキー"
  LOADING_TIP_69: "\n- "
  LOADING_TIP_70: "\n- "
  LOADING_TIP_71: "\n- "
