--- a/localisation/_geacps_autonomous_states_l_english.yml
+++ b/localisation/_geacps_autonomous_states_l_english.yml
@@ -26,6 +26,10 @@
  imperial_member:0 "帝国構成国"
  imperial_protected_state:0 "帝国保護国"
  
+#中華軍閥
+ warlord:0 "中華軍閥"
+ autonomous_province:0 "自治省"
+ 
 #ソ連
  soviet_autonomous_republic:0 "自治共和国"
  soviet_member_republic:0 "構成共和国"
