--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -608,6 +608,10 @@
  SIC_DEF:0 "両シチリア王国"
  SIC_ADJ:0 "両シチリア"
  
+ SMR:0 "サンマリノ共和国"
+ SMR_DEF:0 "サンマリノ共和国"
+ SMR_ADJ:0 "サンマリノ"
+ 
  SPR:0 "スペイン王国"
  SPR_DEF:0 "スペイン王国"
  SPR_national_populism:0 "スペイン国"
@@ -1039,6 +1043,10 @@
  DMA_DEF:0 "ドミニカ国"
  DMA_ADJ:0 "ドミニカ"
  
+ FKL:0 "フォークランド諸島"
+ FKL_DEF:0 "フォークランド諸島"
+ FKL_ADJ:0 "フォークランド"
+ 
  GDL:0 "グアドループ共和国"
  GDL_DEF:0 "グアドループ共和国"
  GDL_ADJ:0 "グアドループ"
@@ -1059,9 +1067,9 @@
  SBL_DEF:0 "サン・バルテルミー島"
  SBL_ADJ:0 "サン・バルテルミー島"
  
- SKM:0 "セントクリストファー・ネイビス連邦"
- SKM_DEF:0 "セントクリストファー・ネイビス連邦"
- SKM_ADJ:0 "セントクリストファー・ネイビス"
+ SKN:0 "セントクリストファー・ネイビス連邦"
+ SKN_DEF:0 "セントクリストファー・ネイビス連邦"
+ SKN_ADJ:0 "セントクリストファー・ネイビス"
  
  SLC:0 "セントルシア"
  SLC_DEF:0 "セントルシア"
@@ -1075,6 +1083,18 @@
  MSR_DEF:0 "モントセラト"
  MSR_ADJ:0 "モントセラト"
  
+ MTQ:0 "マルティニーク"
+ MTQ_DEF:0 "マルティニーク"
+ MTQ_ADJ:0 "マルティニーク"
+ 
+ SVG:0 "セントビンセント及びグレナディーン諸島"
+ SVG_DEF:0 "セントビンセント及びグレナディーン諸島"
+ SVG_ADJ:0 "セントビンセント及びグレナディーン諸島"
+ 
+ TCA:0 "タークス・カイコス"
+ TCA_DEF:0 "タークス・カイコス"
+ TCA_ADJ:0 "タークス・カイコス"
+ 
  TRI:0 "トリニダード・トバゴ共和国"
  TRI_DEF:0 "トリニダード・トバゴ共和国"
  TRI_ADJ:0 "トリニダード・トバゴ"
@@ -1084,9 +1104,45 @@
  FIJ_DEF:0 "フィジー王国"
  FIJ_ADJ:0 "フィジー"
  
+ COK:0 "クック諸島"
+ COK_DEF:0 "クック諸島"
+ COK_ADJ:0 "クック諸島"
+ 
+ CHR:0 "クリスマス島"
+ CHR_DEF:0 "クリスマス島"
+ CHR_ADJ:0 "クリスマス島"
+ 
  GUM:0 "グアム共和国"
  GUM_DEF:0 "グアム共和国"
  GUM_ADJ:0 "グアム"
+ 
+ KIR:0 "キリバス共和国"
+ KIR_DEF:0 "キリバス共和国"
+ KIR_ADJ:0 "キリバス"
+ 
+ MHL:0 "マーシャル諸島共和国"
+ MHL_DEF:0 "マーシャル諸島共和国"
+ MHL_ADJ:0 "マーシャル諸島"
+ 
+ NCL:0 "ニューカレドニア"
+ NCL_DEF:0 "ニューカレドニア"
+ NCL_ADJ:0 "ニューカレドニア"
+ 
+ NFK:0 "ノーフォーク島"
+ NFK_DEF:0 "ノーフォーク島"
+ NFK_ADJ:0 "ノーフォーク島"
+ 
+ NMR:0 "ナウル共和国"
+ NMR_DEF:0 "ナウル共和国"
+ NMR_ADJ:0 "ナウル"
+ 
+ PCN:0 "ピトケアン"
+ PCN_DEF:0 "ピトケアン"
+ PCN_ADJ:0 "ピトケアン"
+ 
+ PLW:0 "パラオ共和国"
+ PLW_DEF:0 "パラオ共和国"
+ PLW_ADJ:0 "パラオ"
  
  PNG:0 "パプアニューギニア独立国"
  PNG_DEF:0 "パプアニューギニア独立国"
@@ -1103,7 +1159,27 @@
  TAH:0 "タヒチ王国"
  TAH_DEF:0 "タヒチ王国"
  TAH_ADJ:0 "タヒチ"
-
+ 
+ TKL:0 "トケラウ"
+ TKL_DEF:0 "トケラウ"
+ TKL_ADJ:0 "トケラウ"
+ 
+ TON:0 "トンガ王国"
+ TON_DEF:0 "トンガ王国"
+ TON_ADJ:0 "トンガ"
+ 
+ TVL:0 "ツバル共和国"
+ TVL_DEF:0 "ツバル共和国"
+ TVL_ADJ:0 "ツバル"
+ 
+ VUT:0 "バヌアツ共和国"
+ VUT_DEF:0 "バヌアツ共和国"
+ VUT_ADJ:0 "バヌアツ"
+ 
+ WLF:0 "ウォリスフツナ"
+ WLF_DEF:0 "ウォリスフツナ"
+ WLF_ADJ:0 "ウォリスフツナ"
+ 
 #ドイツ諸国
  BAY:0 "バイエルン王国"
  BAY_DEF:0 "バイエルン王国"
