国家タグの変更

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -421,9 +421,13 @@
  AKM_DEF:0 "アクモラ共和国"
  AKM_ADJ:0 "アクモラ"
  
- BHR:0 "ブハラ共和国"
- BHR_DEF:0 "ブハラ共和国"
- BHR_ADJ:0 "ブハラ"
+ BHK:0 "ブハラ共和国"
+ BHK_DEF:0 "ブハラ共和国"
+ BHK_ADJ:0 "ブハラ"
+ 
+ BHR:0 "バーレーン国"
+ BHR_DEF:0 "バーレーン国"
+ BHR_ADJ:0 "バーレーン"
  
  BHU:0 "ブータン王国"
  BHU_DEF:0 "ブータン王国"
@@ -497,9 +501,9 @@
  TUR_DEF:0 "トルコ共和国"
  TUR_ADJ:0 "トルコ"
  
- TWS:0 "トランスバイカル共和国"
- TWS_DEF:0 "トランスバイカル共和国"
- TWS_ADJ:0 "トランスバイカル"
+ BAI:0 "トランスバイカル共和国"
+ BAI_DEF:0 "トランスバイカル共和国"
+ BAI_ADJ:0 "トランスバイカル"
  
  UAE:0 "アラブ首長国連邦"
  UAE_DEF:0 "アラブ首長国連邦"
@@ -564,9 +568,9 @@
  MOU_ADJ:0 "山岳"
  
 #ヨーロッパ
- ADR:0 "アドリア共和国"
- ADR_DEF:0 "アドリア共和国"
- ADR_ADJ:0 "アドリア"
+ ADR:0 "アンドラ公国"
+ ADR_DEF:0 "アンドラ公国"
+ ADR_ADJ:0 "アンドラ"
  
  AUS:0 "オーストリア共和国"
  AUS_DEF:0 "オーストリア共和国"
@@ -637,6 +641,10 @@
  VAT:0 "バチカン市国"
  VAT_DEF:0 "バチカン市国"
  VAT_ADJ:0 "バチカン"
+ 
+ VNC:0 "最も高貴なる共和国ヴェネツィア"
+ VNC_DEF:0 "最も高貴なる共和国ヴェネツィア"
+ VNC_ADJ:0 "ヴェネツィア"
  
 #アフリカ
  CPV:0 "カーボベルデ共和国"
