エラー修正, 国旗の追加etc.

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -571,10 +571,6 @@
  CCS_DEF:0 "ザカフカース民主連邦共和国"
  CCS_ADJ:0 "ザカフカース"
  
- MAH:0 "マハバード共和国"
- MAH_DEF:0 "マハバード共和国"
- MAH_ADJ:0 "マハバード"
- 
  MOU:0 "山岳共和国"
  MOU_DEF:0 "山岳共和国"
  MOU_ADJ:0 "山岳"
@@ -862,6 +858,8 @@
  
  KUR:0 "クルディスタン王国"
  KUR_DEF:0 "クルディスタン王国"
+ KUR:0 "クルディスタン共和国"
+ KUR_DEF:0 "クルディスタン共和国"
  KUR_ADJ:0 "クルディスタン"
  
  KUW:0 "クウェート国"
@@ -1346,7 +1344,3 @@
  PAK:0 "パキスタン・イスラム共和国"
  PAK_DEF:0 "パキスタン・イスラム共和国"
  PAK_ADJ:0 "パキスタン"
-
-#その他
- USB:0 ""
- BAS:0 ""
