海軍アップデートその1

--- a/localisation/replace/tech_helicopter_l_english.yml
+++ b/localisation/replace/tech_helicopter_l_english.yml
@@ -109,4 +109,5 @@
  JAP_recon_helicopter_equipment_5:0 "川崎重工業 OH-1 ニンジャ"
  JAP_recon_helicopter_equipment_5_short:0 "OH-1 ニンジャ"
  JAP_recon_helicopter_equipment_5_desc:0 "OH-1は、川崎重工業によって製造された陸上自衛隊の観測ヘリコプター。陸上自衛隊では愛称を「ニンジャ」としているが、機体のコールサインである「オメガ」も愛称として使われている"
+#germany
 
