海軍アップデートその２

--- a/localisation/replace/tech_navy_l_english.yml
+++ b/localisation/replace/tech_navy_l_english.yml
@@ -3,12 +3,33 @@
 #module_category
  ship_fire_extinguishing_system:0 "消化設備"
  EQ_MOD_CAT_fire_extinguishing_system_TITLE:0 "消化設備"
-
+#module slot
+ front_2_custom_slot:0 "前部2"
+ front_3_custom_slot:0 "前部3"
+ front_4_custom_slot:0 "前部4"
+ front_5_custom_slot:0 "前部5"
+ front_6_custom_slot:0 "前部6"
+ mid_5_custom_slot:0 "中部5"
+ mid_6_custom_slot:0 "中部6"
+ mid_7_custom_slot:0 "中部7"
+ mid_8_custom_slot:0 "中部8"
+ mid_9_custom_slot:0 "中部9"
+ rear_3_custom_slot:0 "後部3"
+ rear_4_custom_slot:0 "後部4"
+ rear_5_custom_slot:0 "後部5"
+ rear_6_custom_slot:0 "後部6"
+ fixed_ship_sonar_2_slot:0 "ソナー"
+ fixed_ship_sonar_3_slot:0 "ソナー"
+ fixed_ship_engine_2_slot:0 "第2エンジン"
+ fixed_ship_engine_2_slot:0 "第3エンジン"
+ fixed_ship_fuel_storage_slot:0 "追加増槽"
+ fixed_ship_fire_extinguishing_system_slot:0 "消化設備"
 #module
  ship_fire_extinguishing_system_1:0 "消化設備I型"
  ship_fire_extinguishing_system_1_desc:0 "消化設備I型"
  ship_fire_extinguishing_system_2:0 "消化設備II型"
  ship_fire_extinguishing_system_2_desc:0 "消化設備II型"
+
 
  ship_fuel_storage_1:0 "追加増槽II型"
  ship_fuel_storage_1_desc:0 "追加増槽II型"
