ヘリコプターアプデその3？
グラ追加(2個)

--- a/localisation/replace/tech_helicopter_l_english.yml
+++ b/localisation/replace/tech_helicopter_l_english.yml
@@ -109,5 +109,20 @@
  JAP_recon_helicopter_equipment_5:0 "川崎重工業 OH-1 ニンジャ"
  JAP_recon_helicopter_equipment_5_short:0 "OH-1 ニンジャ"
  JAP_recon_helicopter_equipment_5_desc:0 "OH-1は、川崎重工業によって製造された陸上自衛隊の観測ヘリコプター。陸上自衛隊では愛称を「ニンジャ」としているが、機体のコールサインである「オメガ」も愛称として使われている"
+ JAP_transport_helicopter_equipment_1:0 "ベル UH-1 イロコイ"
+ JAP_transport_helicopter_equipment_1_short:0 "UH-1 イロコイ"
+ JAP_transport_helicopter_equipment_1_desc:0 "UH-1は、アメリカ合衆国のベル・エアクラフト社が開発したモデル 204/205/212ヘリコプターのアメリカ軍における制式名称。1959年よりアメリカ陸軍で採用され、ベトナム戦争などで活躍した。現在は後継機種のシコルスキーUH-60 ブラックホークに置き換えがすすんでいるが、日本の陸上自衛隊を含めて多くの国々では現役である。(出典:Wiki)"
+ JAP_attack_helicopter_equipment_5:0 "富士重工 AH-64D アパッチ・ロングボウ"
+ JAP_attack_helicopter_equipment_5_short:0 "AH-64D アパッチ・ロングボウ"
+ JAP_attack_helicopter_equipment_5_desc:0 "AH-64は固定武装にM230 30mmチェーンガンを持ち、ハイドラ70ロケット弾やヘルファイア対戦車ミサイルの運用が可能な攻撃ヘリコプターである。強力なレーダー、それにバックアップされる火器管制装置やGPSなどの航空電子機器を搭載しており、敵地上部隊への攻撃を迅速かつ正確に行うことができる。"
+
 #germany
+
+#USA
+ USA_transport_helicopter_equipment_1:0 "ベル UH-1 イロコイ"
+ USA_transport_helicopter_equipment_1_short:0 "UH-1 イロコイ"
+ USA_transport_helicopter_equipment_1_desc:0 "UH-1は、アメリカ合衆国のベル・エアクラフト社が開発したモデル 204/205/212ヘリコプターのアメリカ軍における制式名称。1959年よりアメリカ陸軍で採用され、ベトナム戦争などで活躍した。現在は後継機種のシコルスキーUH-60 ブラックホークに置き換えがすすんでいるが、日本の陸上自衛隊を含めて多くの国々では現役である。(出典:Wiki)"
+ USA_attack_helicopter_equipment_5:0 "マクドネル・ダグラス AH-64 アパッチ"
+ USA_attack_helicopter_equipment_5_short:0 "AH-64 アパッチ"
+ USA_attack_helicopter_equipment_5_desc:0 "AH-64は固定武装にM230 30mmチェーンガンを持ち、ハイドラ70ロケット弾やヘルファイア対戦車ミサイルの運用が可能な攻撃ヘリコプターである。強力なレーダー、それにバックアップされる火器管制装置やGPSなどの航空電子機器を搭載しており、敵地上部隊への攻撃を迅速かつ正確に行うことができる。"
 
