--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -176,7 +176,7 @@
  STATE_533:0 "仙臺"
  STATE_534:0 "新潟"
  STATE_535:0 "金澤"
- STATE_536:0 "道西"
+ STATE_536:0 "道央"
  STATE_560:0 "コムソモリスク・ナ・アムーレ"
  STATE_562:0 "アヤノ＝マイスキー"
  STATE_563:0 "ザバイカリエ"
@@ -552,3 +552,5 @@
  STATE_1107:0 ""
  STATE_1108:0 "フランドル・フランセーズ"
  STATE_1109:0 "東マケドニア"
+ STATE_1110:0 "道北"
+ STATE_1111:0 "道南"
