海軍アップデートその4

--- a/localisation/replace/tech_navy_l_english.yml
+++ b/localisation/replace/tech_navy_l_english.yml
@@ -2,22 +2,25 @@
 
 #module_category
  ship_fire_extinguishing_system:0 "消化設備"
- EQ_MOD_CAT_fire_extinguishing_system_TITLE:0 "消化設備"
+ EQ_MOD_CAT_ship_fire_extinguishing_system_TITLE:0 "消化設備"
+ EQ_MOD_CAT_CIWS_TITLE:0 "CIWS"
+
 #module slot
- front_2_custom_slot:0 "前部2"
- front_3_custom_slot:0 "前部3"
- front_4_custom_slot:0 "前部4"
- front_5_custom_slot:0 "前部5"
- front_6_custom_slot:0 "前部6"
- mid_5_custom_slot:0 "中部5"
- mid_6_custom_slot:0 "中部6"
- mid_7_custom_slot:0 "中部7"
- mid_8_custom_slot:0 "中部8"
- mid_9_custom_slot:0 "中部9"
- rear_3_custom_slot:0 "後部3"
- rear_4_custom_slot:0 "後部4"
- rear_5_custom_slot:0 "後部5"
- rear_6_custom_slot:0 "後部6"
+ EQ_MOD_SLOT_front_3_custom_slot_TITLE:0 "前部 3 カスタム"
+ EQ_MOD_SLOT_front_4_custom_slot_TITLE:0 "前部 4 カスタム"
+ EQ_MOD_SLOT_front_5_custom_slot_TITLE:0 "前部 5 カスタム"
+ EQ_MOD_SLOT_front_6_custom_slot_TITLE:0 "前部 6 カスタム"
+ EQ_MOD_SLOT_mid_4_custom_slot_TITLE:0 "中部 4 カスタム"
+ EQ_MOD_SLOT_mid_5_custom_slot_TITLE:0 "中部 5 カスタム"
+ EQ_MOD_SLOT_mid_6_custom_slot_TITLE:0 "中部 6 カスタム"
+ EQ_MOD_SLOT_mid_7_custom_slot_TITLE:0 "中部 7 カスタム"
+ EQ_MOD_SLOT_mid_8_custom_slot_TITLE:0 "中部 8 カスタム"
+ EQ_MOD_SLOT_mid_9_custom_slot_TITLE:0 "中部 9 カスタム"
+ EQ_MOD_SLOT_rear_3_custom_slot_TITLE:0 "後部 3 カスタム"
+ EQ_MOD_SLOT_rear_4_custom_slot_TITLE:0 "後部 4 カスタム"
+ EQ_MOD_SLOT_rear_5_custom_slot_TITLE:0 "後部 5 カスタム"
+ EQ_MOD_SLOT_rear_6_custom_slot_TITLE:0 "後部 6 カスタム"
+
  fixed_ship_sonar_2_slot:0 "ソナー"
  fixed_ship_sonar_3_slot:0 "ソナー"
  fixed_ship_engine_2_slot:0 "第2エンジン"
@@ -30,9 +33,15 @@
  ship_fire_extinguishing_system_2:0 "消化設備II型"
  ship_fire_extinguishing_system_2_desc:0 "消化設備II型"
 
-
  ship_fuel_storage_1:0 "追加増槽II型"
  ship_fuel_storage_1_desc:0 "追加増槽II型"
  ship_fuel_storage_2:0 "追加増槽III型"
  ship_fuel_storage_2_desc:0 "追加増槽III型"
+
+ ship_CIWS_1:0 "CIWS I型"
+ ship_CIWS_1_desc:0 "CIWS I型"
+ ship_CIWS_2:0 "CIWS II型"
+ ship_CIWS_2_desc:0 "CIWS II型"
+ ship_CIWS_3:0 "CIWS III型"
+ ship_CIWS_3_desc:0 "CIWS III型"
 
