海軍アプデその４
糞アプデ。対艦ミサイル追加しただけ

--- a/localisation/replace/AT_l_english.yml
+++ b/localisation/replace/AT_l_english.yml
@@ -2868,6 +2868,10 @@
  ssm_2:0 "改良型対艦ミサイル"
  ssm_2_short:0 "SSM II"
  ssm_2_desc:0 ""
+ ssm_2:0 "発展型対艦ミサイル"
+ ssm_2_short:0 "SSM III"
+ ssm_2_desc:0 ""
+
  sam_1:0 "対空ミサイル"
  sam_1_short:0 "SAM I"
  sam_1_desc:0 ""
