海軍アップデートその５

--- a/localisation/replace/tech_navy_l_english.yml
+++ b/localisation/replace/tech_navy_l_english.yml
@@ -44,4 +44,11 @@
  ship_CIWS_2_desc:0 "CIWS II型"
  ship_CIWS_3:0 "CIWS III型"
  ship_CIWS_3_desc:0 "CIWS III型"
+#equipments category
+ ship_hull_nuke_carrier:0 "原子力航空母艦"
+
+
+#equipments
+ ship_hull_nuke_carrier_1:0 "原子力航空母艦 I"
+ ship_hull_nuke_carrier_2:0 "原子力航空母艦 II"
 
