中東に国家追加

--- a/localisation/_geacps_countries_colony_l_english.yml
+++ b/localisation/_geacps_countries_colony_l_english.yml
@@ -45,6 +45,10 @@
  SHN_ENG-GBR_overseas_territory:0 "$OVERLORDADJ$領セントヘレナ及び属領"
  SHN_ENG-GBR_overseas_territory_DEF:0 "$OVERLORDADJ$領セントヘレナ及び属領"
  
+ Aden_ENG-GBR_protected_territory:0 "$OVERLORDADJ$保護領アデン"
+ Aden_ENG-GBR_protected_territory_DEF:0 "$OVERLORDADJ$保護領アデン"
+ Aden_ENG-GBR_ADJ:0 "$OVERLORDADJ$領アデン"
+ 
 #フランス領
  DJI_FRA_colony:0 "$OVERLORDADJ$領ソマリ海岸及び属領植民地"
  DJI_FRA_colony_DEF:0 "$OVERLORDADJ$領ソマリ海岸及び属領植民地"
