--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -165,6 +165,10 @@
  ZAN_DEF:0 "ザンジバル王国"
  ZAN_ADJ:0 "ザンジバル"
  
+ SYE:0 "南イエメン共和国"
+ SYE_DEF:0 "南イエメン共和国"
+ SYE_ADJ:0 "南イエメン"
+ 
  MLW:0 "マラウイ共和国"
  MLW_DEF:0 "マラウイ共和国"
  MLW_ADJ:0 "ニヤサランド"
