--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -554,3 +554,7 @@
  STATE_1109:0 "東マケドニア"
  STATE_1110:0 "道北"
  STATE_1111:0 "道南"
+ STATE_1112:0 "オマーン沿岸"
+ STATE_1113:0 "ムサンダム"
+ STATE_1114:0 "マドハー"
+ STATE_1115:0 "ソコトラ"
