NFのエラーを修正

--- a/localisation/_geacps_generic_l_english.yml
+++ b/localisation/_geacps_generic_l_english.yml
@@ -1,13 +1,14 @@
-l_english:
+﻿l_english:
+#国家方針
  Strengthening_domestic_capital:0 "自国資本の強化"
  Strengthening_military_power:0 "軍事力の強化"
  Initial_industrialization:0 "初期工業化"
- Focus_on_the_military_one:0 "軍事への注力 Ⅰ"
- Focus_on_the_military_two:0 "軍事への注力 Ⅱ"
- Focus_on_the_military_three:0 "軍事への注力 Ⅲ"
- Focus_on_the_private_sector_one:0 "民間への注力 Ⅰ"
- Focus_on_the_private_sector_two:0 "民間への注力 Ⅱ"
- Focus_on_the_private_sector_three:0 "民間への注力 Ⅲ"
+ Focus_on_the_military_one:0 "軍事への注力 I"
+ Focus_on_the_military_two:0 "軍事への注力 II"
+ Focus_on_the_military_three:0 "軍事への注力 III"
+ Focus_on_the_private_sector_one:0 "民間への注力 I"
+ Focus_on_the_private_sector_two:0 "民間への注力 II"
+ Focus_on_the_private_sector_three:0 "民間への注力 III"
  Focus_on_national_defense:0 "国土防衛への注力"
  Development_of_nuclear_weapons:0 "核兵器の開発"
  Investing_in_technology:0 "技術への投資"
@@ -16,7 +17,7 @@ l_english:
  Focus_on_industry:0 "産業への注力"
  Increased_production_capacity:0 "生産能力の向上"
  Investing_in_infrastructure:0 "インフラへの投資"
- Air_Force:0 "空軍"
+ Air_Force:0 "[ROOT.GetName]空軍"
  Lend-Lease_from_other_countries:0 "他国からのレンドリース"
  Original_research:0 "独自の研究"
  Cooperation_with_the_Navy:0 "海軍との連携"
@@ -25,22 +26,22 @@ l_english:
  Tactical_aircraft_specialization:0 "戦術航空機の特化"
  Expansion_of_air_force_base:0 "空軍基地の増設"
  Rocket_development:0 "ロケットの開発"
- Navy:0 "海軍"
+ Navy:0 "[ROOT.GetName]海軍"
  Flexible_navy:0 "柔軟な海軍"
- Focus_on_submarines_one:0 "潜水艦への注力 Ⅰ"
- Focus_on_submarines_two:0 "潜水艦への注力 Ⅱ"
+ Focus_on_submarines_one:0 "潜水艦への注力 I"
+ Focus_on_submarines_two:0 "潜水艦への注力 II"
  Large_navy:0 "大規模海軍"
  Focus_on_capital_ships:0 "主力艦への注力"
  Focus_on_aircraft_carriers:0 "航空母艦への注力"
  Expansion_of_naval_base:0 "海軍基地の増設"
- Army:0 "陸軍"
- Focus_on_armor_one:0 "機甲科への注力 Ⅰ"
- Focus_on_armor_two:0 "機甲科への注力 Ⅱ"
- Focus_on_artillery_equipment_one:0 "砲兵装備への注力 Ⅰ"
- Focus_on_artillery_equipment_two:0 "砲兵装備への注力 Ⅱ"
+ Army:0 "[ROOT.GetName]陸軍"
+ Focus_on_armor_one:0 "機甲科への注力 I"
+ Focus_on_armor_two:0 "機甲科への注力 II"
+ Focus_on_artillery_equipment_one:0 "砲兵装備への注力 I"
+ Focus_on_artillery_equipment_two:0 "砲兵装備への注力 II"
  Mainland_fortification:0 "本土の要塞化"
- Focus_on_infantry_equipment_one:0 "歩兵装備への注力 Ⅰ"
+ Focus_on_infantry_equipment_one:0 "歩兵装備への注力 I"
  Jet_aircraft_development:0 "ジェット機の開発"
  Focus_on_special_forces:0 "特殊部隊への注力"
  Focus_on_doctrine:0 "ドクトリンへの注力"
- Focus_on_infantry_equipment_two:0 "歩兵装備への注力 Ⅱ"
+ Focus_on_infantry_equipment_two:0 "歩兵装備への注力 II"
