--- a/localisation/geacps_CHI_l_english.yml
+++ b/localisation/geacps_CHI_l_english.yml
@@ -1,4 +1,46 @@
-﻿l_english: 
+﻿l_english:
+#国家方針
+#国民精神
+ GEACPS_idea_CHI_uneasy_unity:0 "不穏な結束"
+ GEACPS_idea_CHI_uneasy_unity_desc:0 "-中華統一戦線-聞こえはいいが実際のところ崩壊する運命が定まっているも同然である。"
+ GEACPS_idea_CHI_suppression_of_rebellion:0 "反乱の抑圧"
+ GEACPS_idea_CHI_suppression_of_rebellion_desc:0 ""
+ GEACPS_idea_CHI_pressure_from_allies:0 "同盟国からの圧力"
+ GEACPS_idea_CHI_pressure_from_allies_desc:0 ""
+ GEACPS_idea_CHI_incompetent_government:0 "無能な政府"
+ GEACPS_idea_CHI_incompetent_government_desc:0 ""
+ GEACPS_idea_CHI_chinese_united_front:0 "中華統一戦線"
+ GEACPS_idea_CHI_chinese_united_front_desc:0 ""
+ GEACPS_idea_CHI_chinese_united_front1:0 "中華統一戦線"
+ GEACPS_idea_CHI_chinese_united_front1_desc:0 ""
+ GEACPS_idea_CHI_chinese_united_front2:0 "中華統一戦線"
+ GEACPS_idea_CHI_chinese_united_front2_desc:0 ""
+ GEACPS_idea_CHI_chinese_united_front3:0 "中華統一戦線"
+ GEACPS_idea_CHI_chinese_united_front3_desc:0 ""
+ GEACPS_idea_CHI_chinese_united_front4:0 "中華統一戦線"
+ GEACPS_idea_CHI_chinese_united_front4_desc:0 ""
+
+ GEACPS_idea_CHI_first_of_all_unity:0 "ひとまずの団結"
+ GEACPS_idea_CHI_first_of_all_unity_desc:0 ""
+ GEACPS_idea_CHI_the_only_one_china:0 "ただ一つの中華"
+ GEACPS_idea_CHI_the_only_one_china_desc:0 ""
+ GEACPS_idea_CHI_failed_states:0 "失敗国家"
+ GEACPS_idea_CHI_failed_states_desc:0 ""
+
+ GEACPS_idea_CHI_phoenix:0 "不死鳥"
+ GEACPS_idea_CHI_phoenix_desc:0 ""
+ GEACPS_idea_CHI_counterattack:0 "反撃の狼煙"
+ GEACPS_idea_CHI_counterattack_desc:0 ""
+ GEACPS_idea_CHI_road_to_reunification1:0 "再統一への道"
+ GEACPS_idea_CHI_road_to_reunification1_desc:0 ""
+ GEACPS_idea_CHI_road_to_reunification2:0 "再統一への道"
+ GEACPS_idea_CHI_road_to_reunification2_desc:0 ""
+ GEACPS_idea_CHI_road_to_reunification3:0 "再統一への道"
+ GEACPS_idea_CHI_road_to_reunification3_desc:0 ""
+ GEACPS_idea_CHI_road_to_reunification4:0 "再統一への道"
+ GEACPS_idea_CHI_road_to_reunification4_desc:0 ""
+
+#イベント
  GEACPS_china.001.title:0 "都市疎開の開始"
  GEACPS_china.001.desc:0 "日本軍の攻撃が激しさを増し、臨時首都武漢にも空襲が日常的に行われたことを受け、住民の疎開が本格的に行われることとなった。すでに政府高官の家族や軍属は重慶へ避難しているが、一般市民の疎開は未だ行われてこなかったため、武漢の主要道路は避難民で混雑しており、一部では兵站への影響が出ているとの情報も出ている。。"
  GEACPS_china.001.a:0 "遅すぎるかもしれんな"
@@ -6,7 +48,6 @@
  GEACPS_china.002.title:0 "陣営内の離反"
  GEACPS_china.002.desc:0 "統一戦線はこれまで団結して敵と戦ってきたが、最近の他国の様子は我々に対し非常に反抗的である。少なくとも、円滑な意思疎通と協力を得られていないのは確かである。"
  GEACPS_china.002.a:0 "あっ(察し)"
-
 
  GEACPS_china.003.title:0 "武漢の陥落"
  GEACPS_china.003.desc:0 "わが軍の決死の防衛にもかかわらず、臨時首都武漢は敵軍の手に落ちた。政府首脳部は前日の夜には武漢を出立していたが、武漢の守備隊は最後まで戦闘を続け、便衣兵や町中に仕掛けた罠を活用し頑強に抵抗した。しかしながら、数的劣勢を覆すことができず、昼頃にはかつての中央政府に日章旗と旭日旗が高々と掲げられた。いくつかの部隊は抵抗活動を続けているとの情報もあるが、その信憑性には疑問符をつける必要がある。"
@@ -158,47 +199,6 @@
  GEACPS_china.035.desc:0 "[FROM.GetName]は我々との協力関係を維持する方針を示した。"
  GEACPS_china.035.a:0 "すばらしい…"
 
-#ideas
-
- GEACPS_idea_CHI_uneasy_unity:0 "不穏な結束"
- GEACPS_idea_CHI_uneasy_unity_desc:0 "-中華統一戦線-聞こえはいいが実際のところ崩壊する運命が定まっているも同然である。"
- GEACPS_idea_CHI_suppression_of_rebellion:0 "反乱の抑圧"
- GEACPS_idea_CHI_suppression_of_rebellion_desc:0 ""
- GEACPS_idea_CHI_pressure_from_allies:0 "同盟国からの圧力"
- GEACPS_idea_CHI_pressure_from_allies_desc:0 ""
- GEACPS_idea_CHI_incompetent_government:0 "無能な政府"
- GEACPS_idea_CHI_incompetent_government_desc:0 ""
- GEACPS_idea_CHI_chinese_united_front:0 "中華統一戦線"
- GEACPS_idea_CHI_chinese_united_front_desc:0 ""
- GEACPS_idea_CHI_chinese_united_front1:0 "中華統一戦線"
- GEACPS_idea_CHI_chinese_united_front1_desc:0 ""
- GEACPS_idea_CHI_chinese_united_front2:0 "中華統一戦線"
- GEACPS_idea_CHI_chinese_united_front2_desc:0 ""
- GEACPS_idea_CHI_chinese_united_front3:0 "中華統一戦線"
- GEACPS_idea_CHI_chinese_united_front3_desc:0 ""
- GEACPS_idea_CHI_chinese_united_front4:0 "中華統一戦線"
- GEACPS_idea_CHI_chinese_united_front4_desc:0 ""
-
- GEACPS_idea_CHI_first_of_all_unity:0 "ひとまずの団結"
- GEACPS_idea_CHI_first_of_all_unity_desc:0 ""
- GEACPS_idea_CHI_the_only_one_china:0 "ただ一つの中華"
- GEACPS_idea_CHI_the_only_one_china_desc:0 ""
- GEACPS_idea_CHI_failed_states:0 "失敗国家"
- GEACPS_idea_CHI_failed_states_desc:0 ""
-
- GEACPS_idea_CHI_phoenix:0 "不死鳥"
- GEACPS_idea_CHI_phoenix_desc:0 ""
- GEACPS_idea_CHI_counterattack:0 "反撃の狼煙"
- GEACPS_idea_CHI_counterattack_desc:0 ""
- GEACPS_idea_CHI_road_to_reunification1:0 "再統一への道"
- GEACPS_idea_CHI_road_to_reunification1_desc:0 ""
- GEACPS_idea_CHI_road_to_reunification2:0 "再統一への道"
- GEACPS_idea_CHI_road_to_reunification2_desc:0 ""
- GEACPS_idea_CHI_road_to_reunification3:0 "再統一への道"
- GEACPS_idea_CHI_road_to_reunification3_desc:0 ""
- GEACPS_idea_CHI_road_to_reunification4:0 "再統一への道"
- GEACPS_idea_CHI_road_to_reunification4_desc:0 ""
-
-#評価
+#ツールチップ
  CHI_kind_peace:0 "寛容な講和"
  CHI_pressure_on_our_country:0 "我が国に対する圧力"
