--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -156,12 +156,13 @@
  GEACPS_NF_JAP_navy_18:0 "艦隊決戦重視の駆逐艦"
  GEACPS_NF_JAP_navy_19:0 ""
  
-#国民精神
+#アイディア
  GEACPS_IDEA_JAP_1:0 "大東亞共榮圈"
  GEACPS_IDEA_JAP_2:0 "参謀本部と軍令部の対立"
  GEACPS_IDEA_JAP_3:0 "逼迫した財政"
  GEACPS_IDEA_JAP_4:0 "布哇王国との関係"
-#event
+ 
+#イベント
  GEACPS_japan.001.title:0 "海軍を主導する人材の選定"
  GEACPS_japan.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
  GEACPS_japan.001.a:0 "航空主兵主義者を据え置く"
@@ -176,13 +177,9 @@
  GEACPS_japan.003.a:0 "陸軍"
  GEACPS_japan.003.b:0 "海軍"
  GEACPS_japan.003.c:0 "空軍"
-
-
+ 
 #ディシジョン
-	#category
  JAP_national_policy_research_outline:0 "国策研究大綱"
  JAP_national_policy_research_outline_desc:0 "研究こそすべて！\n頑張ろう\nこのディシジョンは4年ごとに選択可能です"
-	#
  national_policy_research_outline:0 "[GetYear]年国策研究大綱"
  national_policy_research_outline_desc:0 "国策研究大綱"
-
